--- a/localisation/braz_por/MD_africa_events_l_braz_por.yml
+++ b/localisation/braz_por/MD_africa_events_l_braz_por.yml
@@ -407,7 +407,7 @@
  mali.24.b: "Por Alá! Pela Liberdade do Sahel!"
  mali.25.t: "MNJ Ataca Postos Avançados"
  mali.25.d: "O Movimento Nigerino pela Justiça (MNJ) desencadeou uma série de ataques devastadores em nossos postos militares no oeste e norte do nosso país. A luta fez com que um grande número de locais fosse deslocado devido ao conflito e várias de nossas forças foram mortas, feridas ou perdidas durante os combates. Os tuaregues lutando no Mali começaram a transbordar para nossas regiões tuaregues, causando tensões cada vez maiores que culminaram nos ataques a nossos postos regionais."
- mali.25.a: "Mobilizar o Exército e Pedir Assistência"
+ mali.25.a: "Mobilize os militares e solicite assistência"
  mali.25.b: "Destruir os Terroristas"
  mali.26.t: "MNJ Atacou o Aeroporto de Agadez"
  mali.26.d: "O aeroporto de Agadez foi atacado pelo Movimento Nigerino pela Justiça (MNJ), causando mais interrupções na região a mando do grupo rebelde MNJ. O grupo rebelde tem ambições maiores de frustrar nossa capacidade de manter algum nível razoável de segurança na região. Os rebeldes recuaram rapidamente após a luta e agora estão fugindo de volta para suas terras nativas. Uma guarnição regional está reunida e pronta para avançar contra esses chamados rebeldes. Quais são suas ordens? Devemos montar um contra-ataque ou aguardar nosso tempo e nos preparar para a próxima ofensiva?"
@@ -523,7 +523,7 @@
  haiti.3.d: "Nossas opções são repetir a eleição e trazer a oposição mais para a conversa. A eleição presidencial de 2000 mais tarde neste ano será justa e livre, e a oposição fará parte das eleições."
  haiti.3.a: "Uma Eleição Justa e Livre"
  haiti.4.t: "As Eleições de 2000"
- haiti.4.d: "É hora de outra eleição em nosso grande país. Apesar dos desafios que antecederam as eleições, agora realizamos outra eleição em nossa grande nação. Quem ganhou a eleição?"
+ haiti.4.d: "É hora de mais uma eleição em nosso grande país. Apesar dos desafios que antecederam as eleições, agora acolhemos mais uma eleição na nossa grande nação. Quem ganhou a eleição?"
  haiti.4.a: "Jean-Bertrand Aristide"
  haiti.4.b: "A Oposição Vence"
  haiti.5.t: "Protestos Estudantis Contra Aristide"
