--- a/localisation/braz_por/MD_countries_cosmetic_l_braz_por.yml
+++ b/localisation/braz_por/MD_countries_cosmetic_l_braz_por.yml
@@ -3599,3 +3599,30 @@
  PER_REB: "Conselho Revolucionário do Irã"
  PER_REB_DEF: "Conselho Revolucionário do Irã"
  PER_REB_ADJ: "Iraniano"
+ SSU_SPLA: "Exército Popular de Libertação do Sudão"
+ SSU_SPLA_DEF: "o Exército Popular de Libertação do Sudão"
+ SSU_SPLA_ADJ: "Rebelde sudanês"
+ SSU_AZANIA: "Azânia"
+ SSU_AZANIA_DEF: "Azânia"
+ SSU_AZANIA_ADJ: "Azaniano"
+ SSU_NILE: "República do Nilo"
+ SSU_NILE_DEF: "a República do Nilo"
+ SSU_NILE_ADJ: "Nilo"
+ SSU_KUSH: "República de Kush"
+ SSU_KUSH_DEF: "a República Kush"
+ SSU_KUSH_ADJ: "Kush"
+ NEW_SUDAN: "Novo Sudão"
+ NEW_SUDAN_DEF: "o Novo Sudão"
+ NEW_SUDAN_ADJ: "Sudanesa"
+ DAR_DLF: "Frente de Libertação de Darfur"
+ DAR_DLF_DEF: "a Frente de Libertação de Darfur"
+ DAR_DLF_ADJ: "Darfuriana"
+ SUD_SPLMN: "Movimento Popular de Libertação do Sudão-Norte"
+ SUD_SPLMN_DEF: "o Movimento de Libertação do Povo do Sudão-Norte"
+ SUD_SPLMN_ADJ: "Rebelde sudanês"
+ SUD_SRF: "Frente Revolucionária Sudanesa"
+ SUD_SRF_DEF: "a Frente Revolucionária Sudanesa"
+ SUD_SRF_ADJ: "Rebelde sudanês"
+ SSU_SUD_autonomy_autonomous_state: "Região Autônoma do Sul do Sudão"
+ SSU_SUD_autonomy_autonomous_state_DEF: "a Região Autônoma do Sul do Sudão"
+ SSU_SUD_autonomy_autonomous_state_ADJ: "Sudanesa do Sul"
