--- a/localisation/braz_por/MD_focus_BOS_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_BOS_l_braz_por.yml
@@ -305,7 +305,7 @@
  bos_expand_islamic_unity: "WIP DESC"
  bos_commence_centralization: "WIP DESC"
  bos_declare_a_islamic_take_over: "Revolta El Mudžahid"
- bos_declare_a_islamic_take_over_desc: "Os combatentes estrangeiros que enviamos estão insatisfeitos com nossas ações atuais na guerra civil e estão planejando um golpe contínuo contra o governo!"
+ bos_declare_a_islamic_take_over_desc: "Os combatentes estrangeiros que destacamos estão descontentes com a nossa acção actual na guerra civil e estão a planear um golpe de estado em curso contra o governo!"
  bos_core_states_2: "Conversão Islâmica e Integração de [From.GetName]"
  Boost_yugo_nost_serbia: "Impulsionar a Iugonostalgia nos Balcãs Inferiores"
  Boost_yugo_nost_croatia: "Impulsionar a Iugonostalgia na Croácia"
@@ -389,7 +389,6 @@
  bos_save_by_peacekeepersEUFOR: "Ao §Rinício da guerra interna§! as forças §YEUFOR§! irão §YExecutar§!"
  Bos_overtime_For_leader: "Horas extras de liderança"
  Bosnian_cooperator: "Cooperador Bósnio"
- Bosnian_polical_reformer: "Reformador Político Bósnio"
  BOS_Roatation_of_leaders1: "Rotação está devido"
  BOS_Roatation_of_leaders: "Realizar uma Rotação Presidencial"
  BOS_upset_with_term_length: "Desejo do povo por representação no governo"
@@ -428,7 +427,7 @@
  bos_this_can_be_rejected: "§REsta proposta pode ser rejeitada pela nação receptora§!"
  Bosnia_united_nations_aid: "Ajuda de parceiros internacionais"
  bos_international_funding: "Ajuda de Parceiros Internacionais"
- bos_international_funding_desc: "Vários programas foram estabelecidos para fornecer assistência financeira à Bósnia e Herzegovina após a Guerra da Bósnia. Esses programas foram criados por várias organizações internacionais, incluindo o Banco Mundial, a União Europeia (UE), o Programa das Nações Unidas para o Desenvolvimento (PNUD) e a Agência dos Estados Unidos para o Desenvolvimento Internacional (USAID), entre outros.\n\nO objetivo geral desses programas era apoiar os esforços de reconstrução e desenvolvimento da Bósnia, que incluíam a reconstrução de infraestrutura, melhoria da governança e serviços públicos, promoção do desenvolvimento econômico e inclusão social. As iniciativas específicas financiadas por esses programas variavam, mas frequentemente se concentravam em áreas como educação, saúde, moradia, criação de empregos e fortalecimento das instituições democráticas.\n\nAlguns exemplos de iniciativas específicas financiadas durante este período incluem a Estratégia de Assistência ao País da Bósnia e Herzegovina do Banco Mundial, que forneceu financiamento para projetos de infraestrutura, desenvolvimento institucional e serviços sociais; o programa CARDS da UE, que apoiou reformas econômicas e integração com a UE; e os programas da USAID focados em promover o crescimento econômico, fortalecer a sociedade civil e melhorar a governança.\n\nNo geral, esses programas forneceram apoio financeiro e técnico fundamental à Bósnia e Herzegovina durante um período de reconstrução e transição significativos, ajudando o país a estabilizar e criar as bases para o crescimento e desenvolvimento futuro.§W\n---------------\n§!Será §RCancelado§! se não tiver §YSFOR§!"
+ bos_international_funding_desc: "Vários programas foram estabelecidos para fornecer assistência financeira à Bósnia e Herzegovina após a Guerra da Bósnia. Esses programas foram criados por várias organizações internacionais, incluindo o Banco Mundial, a União Europeia (UE), o Programa das Nações Unidas para o Desenvolvimento (PNUD) e a Agência dos Estados Unidos para o Desenvolvimento Internacional (USAID), entre outros.\n\nO objetivo geral desses programas era apoiar os esforços de reconstrução e desenvolvimento da Bósnia, que incluíam a reconstrução de infraestrutura, melhoria da governança e serviços públicos, promoção do desenvolvimento econômico e inclusão social. As iniciativas específicas financiadas por esses programas variavam, mas frequentemente se concentravam em áreas como educação, saúde, moradia, criação de empregos e fortalecimento das instituições democráticas.\n\nAlguns exemplos de iniciativas específicas financiadas durante este período incluem a Estratégia de Assistência ao País da Bósnia e Herzegovina do Banco Mundial, que forneceu financiamento para projetos de infraestrutura, desenvolvimento institucional e serviços sociais; o programa CARDS da UE, que apoiou reformas econômicas e integração com a UE; e os programas da USAID focados em promover o crescimento econômico, fortalecer a sociedade civil e melhorar a governança.\n\nNo geral, esses programas forneceram apoio financeiro e técnico fundamental à Bósnia e Herzegovina durante um período de reconstrução e transição significativos, ajudando o país a estabilizar e criar as bases para o crescimento e desenvolvimento futuro.\n§W---------------§!\nEsta ideia irá §Remover§! if Não tem §YSFOR§! ideia."
  BOS_croats_declares_indpend_hidden: "Adesão para novos estados"
  BOS_unlocks_prep_for_srpska_war: "£decision_icon_small §YDesbloqueia§! §Ydecisões§! de Preparação para a Guerra Civil Bósnia Srpska"
  BOS_unlocks_EUFOR: "£decision_icon_small §YDesbloqueia§! §Ydecisões§! de Estabelecer EUFOR\nUma vez removido §tSFOR§! "
@@ -496,10 +495,9 @@
  bos_croat_stability_will_rise_tt: ""
  bos_srpska_stability_will_rise_tt: ""
  bos_bosniak_stability_will_rise_tt: ""
- if_a_strike_happens_this_may_lead_to_a_shift_in_goverment_tt: "Se uma greve acontecer, isso pode levar a uma mudança no governo"
- with_out_the_required_euipment_and_support_are_mining_industy_will_collapse_tt: "§RSem o equipamento e apoio necessários, a indústria de mineração entrará em colapso §!"
- bos_this_foucs_will_give_more_rewards_if_you_do_both_of_the_requirements: "Este foco oferece efeitos diferentes se você cumprir seus pré-requisitos§"
- with_out_the_required_euipment_and_support_are_farming_industy_will_collapse_tt: "§RSem o equipamento e apoio necessários, a indústria agrícola entrará em colapso §!"
+ with_out_the_required_euipment_and_support_are_mining_industy_will_collapse_tt: "§RSem o equipamento e apoio necessários, a indústria de mineração entrará em colapso§!"
+ bos_this_foucs_will_give_more_rewards_if_you_do_both_of_the_requirements: "§REste foco dá efeitos diferentes se você cumprir seus pré-requisitos§!"
+ with_out_the_required_euipment_and_support_are_farming_industy_will_collapse_tt: "§RSem o equipamento e apoio necessários, a indústria agrícola entrará em colapso§!"
  bos_investment: "Essas nações estarão mais abertas para investir em nós"
  BOS_more_likely_to_send_support: "Mais propensos a enviar apoio em caso de conflito"
  BOS_more_likely_to_send_intervention_forces: "Mais propensos a enviar forças de intervenção"
@@ -606,7 +604,7 @@
  hzg_fed: "Federação Herzegovina"
  rsk_fed: "Federação Srpska"
  bos_srpska_colour_change3: "Maior Srpska"
- RULE_BOSNIA_CANT_GET_RID_OF_NATIONS: "§R Não é possível expulsar nações da Federação §!"
+ RULE_BOSNIA_CANT_GET_RID_OF_NATIONS: "§RNão é possível expulsar nações da Federação§!"
  bos_war_civil_war: "A Guerra Civil Bósnia"
  Bosnia.1.t: "Guerra Civil Bósnia"
  Bosnia.1.d: "A Bósnia entrou novamente em conflito civil, com a República Sérvia declarando independência do estado federal maior da Bósnia. As tensões têm crescido há algum tempo, e esse conflito era inevitável. Reivindicaremos a vitória sobre esses traidores, a qualquer custo."
@@ -625,14 +623,14 @@
  Bosnia.11.a: "Uma maior amizade entre nossos estados crescerá"
  Bosnia.12.t: "Greve dos Agricultores"
  Bosnia.12.d: "Muitas pessoas em todo o país passam fome por falta de comida em seus pratos. Muitos foram às ruas em protesto contra o governo. Eles querem que o governo tome medidas para apoiar a base da nação. Muitos pediram uma mudança de governo. Vamos ceder a essas demandas?"
- Bosnia.12.a: "Uma mudança no governo é necessária"
+ Bosnia.12.a: "É necessária uma mudança no governo"
  Bosnia.12.b: "Chegar a um acordo"
  Bosnia.13.t: "Chegar a um acordo"
  Bosnia.13.d: "Muitos pediram paz e o fim dos protestos. Hoje, o governo assinou um acordo que apoiará os trabalhadores, agora e no futuro."
  Bosnia.13.a: "Um acordo que tivemos que aceitar"
  Bosnia.14.t: "Greve dos Mineiros"
  Bosnia.14.d: "Muitos na indústria de mineração pediram melhores salários, melhores condições de trabalho e proteção contra ambientes adversos. Um trabalhador disse: 'Eu preferiria estar no Brasil.' Essa manifestação e conflitos vêm ocorrendo e não vão parar. Vamos ceder a essas demandas?"
- Bosnia.14.a: "Uma mudança no governo é necessária"
+ Bosnia.14.a: "É necessária uma mudança no governo"
  Bosnia.14.b: "Chegar a um acordo"
  Bosnia.9.t: "[From.Owner.GetName] Solicita Ajuda Turca"
  Bosnia.9.d: "A nação da Bósnia está em caos novamente e pede ajuda. Eles nos pedem para fornecer armas às forças locais bósnias. Isso pode ser uma chance de recuperar uma posição nos Balcãs ou pode não valer o esforço."
@@ -726,7 +724,7 @@
  Bosnia_bosnia_random: ""
  Bosnia_serb_random: ""
  Bosnia_croat_random: ""
- decision_cost_civ_factory_1: "decision_cost_civ_factory_1"
+ decision_cost_civ_factory_1: "Custo para fábrica civil"
  armor: "armor"
  event_chain_will_fire: ""
  BOS_refection_of_are_doctrine: ""
@@ -844,3 +842,5 @@
  bosnia_political.24.t: "A democracia é posta à prova na Bósnia"
  bosnia_political.24.d: "A nação da Bósnia passou por um estresse quando o atual líder interino do estado se recusou a renunciar ao poder. Muitos no país ficaram frustrados com essa decisão, chamando-a de um ato de heresia e minando os acordos estabelecidos no acordo de Dayton."
  bosnia_political.24.a: "Isso não pode ser uma boa notícia"
+ Bosnian_political_reformer: "Reformador Político"
+ if_a_strike_happens_this_may_lead_to_a_shift_in_government_tt: "Se uma greve acontecer, isso pode levar a uma mudança no governo"
