--- a/localisation/braz_por/MD_ideas_l_braz_por.yml
+++ b/localisation/braz_por/MD_ideas_l_braz_por.yml
@@ -928,3 +928,5 @@
  SHA_libyan_education_desc: "A Líbia tem sido um fervoroso defensor da independência saharaui desde a década de 1980. Uma das principais formas pelas quais a Líbia apoia a Frente POLISARIO é proporcionando educação a muitos jovens saharauis. Isto permite ao nosso povo o acesso à educação que os marroquinos nos negam."
  idea_overlord_subsidies: "Subsídios Overlord"
  idea_overlord_subsidies_desc: "Os subsídios que o nosso suserano nos fornece para o nosso benefício económico estão a fazer com que percamos lentamente a nossa autonomia à medida que nos tornamos cada vez mais dependentes deles para a nossa economia."
+ SUD_humiliated_army: "Exército humilhado"
+ SUD_humiliated_army_desc: "O recente ataque dos rebeldes de Darfur a El Fasher foi um grande golpe militar e psicológico para o exército sudanês. Um grupo muito menor de rebeldes conseguiu destruir várias aeronaves, matar vários soldados e capturar um major-general que era comandante de uma base aérea. Levará algum tempo até que o exército possa se recuperar disso."
