--- a/localisation/braz_por/MD_middle_east_content_l_braz_por.yml
+++ b/localisation/braz_por/MD_middle_east_content_l_braz_por.yml
@@ -739,11 +739,11 @@
  gcc.21.t: "[FROM.GetNameDef] Se Une ao Conselho de Cooperação do Golfo"
  gcc.21.d: "Após um longo processo de adesão, [FROM.GetNameDef] conseguiu garantir a filiação ao Conselho de Cooperação do Golfo, uma organização regional fundada por [SAU.GetNameDef], [BHR.GetNameDef], [KUW.GetNameDef], [OMA.GetNameDef], [QAT.GetNameDef] e [UAE.GetNameDef]. Esse desenvolvimento representa uma expansão significativa do CCG, que por muito tempo ficou receoso de aceitar novos membros em suas fileiras. [FROM.GetNameDef] agora poderá aproveitar uma variedade de benefícios econômicos, políticos e militares que a filiação ao CCG proporciona."
  gcc.21.a: "O CCG se fortalece..."
- gcc.22.t: "Os [FROM.GetAdjective]s estão solicitando vendas de armas em bloco para o CCG"
+ gcc.22.t: "O [FROM.GetAdjective] exige que o grupo venda armas para o GCC"
  gcc.22.d: "O Conselho de Cooperação do Golfo historicamente se alinhou ao governo [ROOT.GetAdjective] e, portanto, é um importante aliado [ROOT.GetAdjective] no mundo árabe. Os [FROM.GetAdjective]s argumentaram que conceder vendas de armas em bloco para o CCG os ajudará a se defender contra nossos inimigos comuns, fornecendo aos membros do CCG armas muito necessárias e melhorando a interoperabilidade de suas forças."
  gcc.22.a: "Vamos fornecer as armas."
  gcc.22.b: "Precisamos delas para nós mesmos."
- gcc.23.t: "[FROM.GetNameDef] Finaliza Venda de Armas em Bloco para o CCG"
+ gcc.23.t: "[FROM.GetNameDef] finaliza venda de armas do grupo GCC"
  gcc.23.d: "Dando continuidade a um pedido dos estados membros do Conselho de Cooperação do Golfo, o governo [FROM.GetAdjective] aprovou a venda de armas em bloco para a organização como um todo. Esse movimento tem sido visto como um sinal da crescente unidade do CCG, já que no passado os vários militares do CCG não eram integrados e coordenados, um fenômeno que foi exacerbado pela aquisição de armas de diferentes fornecedores. [FROM.GetLeader] expressou esperança de que essa venda ajudasse o CCG a combater ameaças compartilhadas no Oriente Médio de forma mais eficaz. Os estados árabes do Golfo que compõem o CCG, por sua vez, expressaram satisfação com o sucesso desse acordo."
  gcc.24.t: "[FROM.GetNameDef] Está nos Pressionando a Apoiar o Novo Membro do CCG"
  gcc.24.d: "[pressured_to_accept] está atualmente buscando a filiação ao Conselho de Cooperação do Golfo, e está sendo apoiado nesse esforço por [FROM.GetNameDef]. Devemos considerar se também devemos apoiar os esforços de [pressured_to_accept]."
