--- a/localisation/braz_por/MD_wars_l_braz_por.yml
+++ b/localisation/braz_por/MD_wars_l_braz_por.yml
@@ -1,7 +1,6 @@
 ﻿l_braz_por:
  WAR_NAME_SYR_FSA: "Guerra Civil Síria"
  WAR_NAME_SYR_NUS: "Guerra Civil Síria"
- WAR_NAME_AGF_SSU: "Guerra Civil do Sudão do Sul"
  WAR_NAME_AQY_YEM: "Insurgência da Al-Qaeda no Iêmen de Hadi"
  WAR_NAME_AQY_HOU: "Insurgência da Al-Qaeda no Iêmen Houthi"
  WAR_NAME_HOU_YEM: "Guerra Civil do Iêmen"
@@ -13,7 +12,6 @@
  WAR_NAME_GNC_TUA: "Envolvimento Tuaregue na Líbia"
  WAR_NAME_HOR_TUA: "Confronto em Ubari na Líbia"
  WAR_NAME_GNA_TUA: "Rebelião Tuaregue na Líbia"
- WAR_NAME_SUD_SSU: "Segunda Guerra Civil Sudanesa"
  WAR_NAME_SOM_SWS: "Revolta do Exército de Resistência Rahanweyn"
  WAR_NAME_SNA_SWS: "Revolta do Exército de Resistência Rahanweyn"
  WAR_NAME_SOM_JUB: "Guerra de Jubaland pela Independência"
@@ -30,8 +28,6 @@
  WAR_NAME_GEO_SOV: "Guerra Russo-Georgiana"
  WAR_NAME_KOR_NKO: "Segunda Guerra Coreana"
  WAR_NAME_USA_NKO: "Segunda Guerra Coreana"
- WAR_NAME_SUD_SRF: "Terceira Guerra Civil Sudanesa"
- WAR_NAME_SRF_SUD: "Terceira Guerra Civil Sudanesa"
  WAR_NAME_USA_MEX: "Segunda Guerra Mexicano-Americana"
  WAR_NAME_CHI_TAI: "Guerra do Estreito de Taiwan"
  WAR_NAME_CHI_MON: "Guerra no Deserto de Gobi Norte"
@@ -116,3 +112,5 @@
  WAR_NAME_JPK_JAP: "Terceira Guerra Civil Japonesa"
  WAR_NAME_JPK_JPW: "Terceira Guerra Civil Japonesa"
  WAR_NAME_JPK_JPC: "Terceira Guerra Civil Japonesa"
+ WAR_NAME_SSU_SUD: "Second Sudanese Civil War"
+ WAR_NAME_DAR_SUD: "War In Darfur"
