--- a/localisation/braz_por/replace/replaced_from_vanilla_buildings_l_braz_por.yml
+++ b/localisation/braz_por/replace/replaced_from_vanilla_buildings_l_braz_por.yml
@@ -10,7 +10,7 @@
  infrastructure_desc: "Este prédio fornece ao estado melhorias na infraestrutura. Aumenta o poder de suprimento em regiões estratégicas e a velocidade das suas divisões, além de aumentar a extração de recursos naturais."
  internet_station: "Infraestrutura de Rede"
  internet_station_plural: "Infraestruturas de Rede"
- internet_station_desc: "§YNetwork Infrastructure§! are tall structures used in the telecommunication and radio communication fields in order to push transmissions across great distances or underground fiber optic cables and cloud computing systems.\n\nEach level of §YNetwork Infrastructure§! improves local productivity growth speed by §G+5.00%§!."
+ internet_station_desc: "§YInfraestruturas de Rede§! são estruturas altas usadas nos campos de telecomunicação e radiocomunicação para enviar transmissões por grandes distâncias ou por cabos de fibra ótica subterrâneos e sistemas de computação em nuvem. \n\nCada nível de §YInfraestrutura de Rede§! melhora a velocidade de construção local em §G+5.00%§!."
  dockyard: "Estaleiro Naval"
  dockyard_plural: "Estaleiros Navais"
  dockyard_desc: "Este prédio fornece ao estado indústria para a construção de novos navios."
@@ -61,7 +61,7 @@
  supply_node_desc: "Um Centro de Suprimentos é um ponto ao longo de uma ferrovia, fora das cidades existentes, onde o suprimento pode ser obtido."
  rail_way: "Ferrovia"
  rail_way_plural: "Ferrovias"
- rail_way_desc: "Railways are used to connect Supply Hubs together to allow drawing of supply far from your capital.\n\nEach level of §YRailways§! improves local productivity growth speed by §G+4.00%§!."
+ rail_way_desc: "As Ferrovias são usadas para conectar os Hubs de Suprimentos, permitindo o abastecimento de suprimentos longe da sua capital.\n\nCada nível de §YFerrovias§! melhora a velocidade de crescimento da produtividade local em §G+4,00%§!."
  fossil_powerplant: "Usina termelétrica"
  fossil_powerplant_plural: "Usinas termelétricas"
  fossil_powerplant_desc: "Usina termelétrica é um conjunto abrangente de energia termelétrica baseada em fósseis. Estes incluem, mas não estão limitados a; carvão, gás natural e petróleo. §YUsinas Termelétricas§! ficarão ociosas se a geração de energia for maior que o consumo.\n\nFornece ao estado:\nGanho de energia base: §G+1§! GW\n"
