--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -2239,7 +2239,7 @@
  MOV.Autocracy: "£SOV_Autocracy Rodina"
  MOV.Autocracy_icon: "£SOV_Autocracy"
  #Non-Aligned
- MOV.oligarchism: "£MOV_oligarchism For the Saint Rus'!"
+ MOV.oligarchism: "£MOV_oligarchism For the Saint Rus!"
  MOV.oligarchism_icon: "£MOV_oligarchism"
  MOV.neutral_Social: "£SOV_non_aligned_socialist_democrat Patriots of Mordovia"
  MOV.neutral_Social_icon: "£SOV_non_aligned_socialist_democrat"
@@ -2249,7 +2249,7 @@
  MOV.Neutral_Communism_icon: "£SOV_agrarian_party"
  MOV.Neutral_Communism_1: "£SOV_non_aligned_communism Communists of Mordovia"
  MOV.Neutral_Communism_1_icon: "£SOV_non_aligned_communism"
- MOV.Neutral_conservatism: "£MOV_neutral_conservative Greate Fatherland"
+ MOV.Neutral_conservatism: "£MOV_neutral_conservative Great Fatherland"
  MOV.Neutral_conservatism_icon: "£MOV_neutral_conservative"
  #Nationalist
  MOV.Nat_Fascism: "£MOV_nat_fascism Mordovian Freedom Front"
@@ -3078,7 +3078,7 @@
  CRM.neutral_Social_icon: "£SOV_non_aligned_socialist_democrat"
  CRM.neutral_Social_1: "£SOV_non_aligned_socialist_democrat_1 New People"
  CRM.neutral_Social_1_icon: "£SOV_non_aligned_socialist_democrat_1"
- CRM.Neutral_conservatism: "£MOV_neutral_conservative Greate Fatherland"
+ CRM.Neutral_conservatism: "£MOV_neutral_conservative Great Fatherland"
  CRM.Neutral_conservatism_icon: "£MOV_neutral_conservative"
  CRM.Neutral_green: "£SOV_non_aligned_greens The Greens"
  CRM.Neutral_green_icon: "£SOV_non_aligned_greens"
