--- a/localisation/french/MD_countries_cosmetic_l_french.yml
+++ b/localisation/french/MD_countries_cosmetic_l_french.yml
@@ -3599,3 +3599,30 @@
  PER_REB: "Conseil révolutionnaire d'Iran"
  PER_REB_DEF: "Conseil révolutionnaire d'Iran"
  PER_REB_ADJ: "iranien"
+ SSU_SPLA: "Armée populaire de libération du Soudan"
+ SSU_SPLA_DEF: "l'Armée populaire de libération du Soudan"
+ SSU_SPLA_ADJ: "rebelle soudanais"
+ SSU_AZANIA: "Azanie"
+ SSU_AZANIA_DEF: "Azanie"
+ SSU_AZANIA_ADJ: "Azanien"
+ SSU_NILE: "République du Nil"
+ SSU_NILE_DEF: "la République du Nil"
+ SSU_NILE_ADJ: "Nile"
+ SSU_KUSH: "République de Kouch"
+ SSU_KUSH_DEF: "la République de Kouch"
+ SSU_KUSH_ADJ: "Kouch"
+ NEW_SUDAN: "Nouveau Soudan"
+ NEW_SUDAN_DEF: "le Nouveau Soudan"
+ NEW_SUDAN_ADJ: "soudanais"
+ DAR_DLF: "Front de libération du Darfour"
+ DAR_DLF_DEF: "le Front de libération du Darfour"
+ DAR_DLF_ADJ: "Darfouri"
+ SUD_SPLMN: "Mouvement populaire de libération du Soudan-Nord"
+ SUD_SPLMN_DEF: "le Mouvement populaire de libération du Soudan-Nord"
+ SUD_SPLMN_ADJ: "rebelle soudanais"
+ SUD_SRF: "Front révolutionnaire soudanais"
+ SUD_SRF_DEF: "le Front révolutionnaire soudanais"
+ SUD_SRF_ADJ: "rebelle soudanais"
+ SSU_SUD_autonomy_autonomous_state: "Région autonome du Sud-Soudan"
+ SSU_SUD_autonomy_autonomous_state_DEF: "la région autonome du Sud-Soudan"
+ SSU_SUD_autonomy_autonomous_state_ADJ: "Soudanais du Sud"
