--- a/localisation/french/MD_ideas_l_french.yml
+++ b/localisation/french/MD_ideas_l_french.yml
@@ -928,3 +928,5 @@
  SHA_libyan_education_desc: "La Libye est un ardent défenseur de l'indépendance sahraouie depuis les années 1980. L'une des principales façons dont la Libye soutient le Front Polisario est de fournir une éducation à de nombreux jeunes sahraouis. Cela permet à notre peuple d'accéder à l'éducation que les marocains nous refusent."
  idea_overlord_subsidies: "Subventions du suzerain"
  idea_overlord_subsidies_desc: "Les subventions que notre suzerain nous accorde pour notre bénéfice économique nous font perdre lentement notre autonomie à mesure que nous devenons de plus en plus dépendants d'elles pour notre économie."
+ SUD_humiliated_army: "Armée humiliée"
+ SUD_humiliated_army_desc: "Le récent raid des rebelles du Darfour à El Fasher a porté un coup militaire et psychologique majeur à l'armée soudanaise. Un groupe beaucoup plus restreint de rebelles a réussi à détruire plusieurs avions, à tuer plusieurs soldats et à capturer un général de division qui commandait une base aérienne. Il faudra du temps avant que l’armée puisse s’en remettre."
