--- a/localisation/french/MD_middle_east_content_l_french.yml
+++ b/localisation/french/MD_middle_east_content_l_french.yml
@@ -739,11 +739,11 @@
  gcc.21.t: "[FROM.GetNameDef] rejoint le Conseil de coopération du Golfe"
  gcc.21.d: "Après un long processus d'adhésion, [FROM.GetNameDef] a réussi à obtenir l'adhésion au Conseil de coopération du Golfe, une organisation régionale fondée par [SAU.GetNameDef], [BHR.GetNameDef], [KUW.GetNameDef], [OMA.GetNameDef] , [QAT.GetNameDef] et [UAE.GetNameDef]. Cette évolution représente une expansion significative du CCG qui a longtemps hésité à accepter de nouveaux membres dans ses rangs. [FROM.GetNameDef] pourra désormais profiter d’une série d’avantages économiques, politiques et militaires que confère l’adhésion au CCG."
  gcc.21.a: "Le CCG se renforce..."
- gcc.22.t: "Les [FROM.GetAdjective] demandent des ventes d'armes groupées au CCG"
+ gcc.22.t: "Le [FROM.GetAdjective] exige que le groupe vende des armes au CCG"
  gcc.22.d: "Le Conseil de coopération du Golfe s'est historiquement aligné sur le gouvernement [ROOT.GetAdjective] et constitue donc un allié [ROOT.GetAdjective] important dans le monde arabe. Les [FROM.GetAdjective] ont fait valoir que le fait d’accorder des ventes d’armes en bloc au CCG les aiderait à se défendre contre nos ennemis communs en fournissant aux membres du CCG les armes indispensables et en renforçant l’interopérabilité de leurs forces."
  gcc.22.a: "Donnons-leur les armes."
  gcc.22.b: "Nous en avons besoin."
- gcc.23.t: "[FROM.GetNameDef] finalise la vente d'armes du bloc du CCG"
+ gcc.23.t: "[FROM.GetNameDef] finalise la vente d'armes du groupe GCC"
  gcc.23.d: "Faisant suite à une demande des États membres du Conseil de coopération du Golfe, [FROM.GetAdjective] a approuvé une vente d'armes en bloc à l'organisation dans son ensemble. Cette décision a été présentée comme un signal de l'unité croissante du CCG, car dans le passé, les différentes armées du CCG n'étaient ni intégrées ni coordonnées, un phénomène exacerbé par leurs achats d'armes auprès de différents fournisseurs. [FROM.GetLeader] a exprimé l'espoir que cette vente aiderait le CCG à lutter plus efficacement contre les menaces communes au Moyen-Orient. Les États arabes du Golfe qui composent le CCG se sont pour leur part dits ravis du succès de cet accord."
  gcc.24.t: "[FROM.GetNameDef] nous fait pression pour soutenir un nouveau membre du CCG"
  gcc.24.d: "[pressured_to_accept] cherche actuellement à devenir membre du Conseil de coopération du Golfe et est soutenu dans cette démarche par [FROM.GetNameDef]. Nous devrions réfléchir à l'opportunité de soutenir également les efforts de [pressured_to_accept]."
