--- a/localisation/polish/MD_focus_BOS_l_polish.yml
+++ b/localisation/polish/MD_focus_BOS_l_polish.yml
@@ -305,7 +305,7 @@
  bos_expand_islamic_unity: "OPIS WIPU"
  bos_commence_centralization: "OPIS WIPU"
  bos_declare_a_islamic_take_over: "Bunt El Mudžahidów"
- bos_declare_a_islamic_take_over_desc: "Zagraniczni bojownicy, których wysłaliśmy, byli niezadowoleni z naszych obecnych działań w wojnie domowej i planują ciągły zamach stanu na rząd!"
+ bos_declare_a_islamic_take_over_desc: "Zagraniczny bojownik, którego wysłaliśmy, był niezadowolony z naszych obecnych działań w wojnie domowej i planuje ciągły zamach stanu na rząd!"
  bos_core_states_2: "Islamska konwersja i integracja [From.GetName]"
  Boost_yugo_nost_serbia: "Wzmocnij Yugonostalgię na dolnych Bałkanach"
  Boost_yugo_nost_croatia: "Wzmocnij Yugonostalgię w Chorwacji"
@@ -389,7 +389,6 @@
  bos_save_by_peacekeepersEUFOR: "Po §Wojnie wewnętrznej§! §YEUFOR§! siły §YEnact§!"
  Bos_overtime_For_leader: "Lider w nadgodzinach"
  Bosnian_cooperator: "Bośniacki współpracownik"
- Bosnian_polical_reformer: "Reformator polityczny"
  BOS_Roatation_of_leaders1: "Rotacja jest wymagana"
  BOS_Roatation_of_leaders: "Wykonaj rotację prezydenta"
  BOS_upset_with_term_length: "Pragnienie reprezentacji w rządzie"
@@ -428,7 +427,7 @@
  bos_this_can_be_rejected: "§RPodlega to odrzuceniu przez naród przyjmujący§!"
  Bosnia_united_nations_aid: "Pomoc partnerów międzynarodowych"
  bos_international_funding: "Pomoc partnerów międzynarodowych"
- bos_international_funding_desc: "Utworzono różnorodne programy mające na celu zapewnienie pomocy finansowej Bośni i Hercegowinie po wojnie w Bośni. Programy te zostały ustanowione przez różne organizacje międzynarodowe, w tym między innymi Bank Światowy, Unię Europejską (UE), Program Narodów Zjednoczonych ds. Rozwoju (UNDP) i Agencję Rozwoju Międzynarodowego Stanów Zjednoczonych (USAID).\n\nOgólny celem tych programów było wsparcie wysiłków Bośni na rzecz odbudowy i rozwoju, które obejmowały odbudowę infrastruktury, poprawę zarządzania i usług publicznych, promowanie rozwoju gospodarczego i wspieranie włączenia społecznego. Konkretne inicjatywy finansowane w ramach tych programów były różne, ale często skupiały się na obszarach takich jak edukacja, opieka zdrowotna, mieszkalnictwo, tworzenie miejsc pracy i wzmacnianie instytucji demokratycznych.\n\nNiektóre przykłady konkretnych inicjatyw finansowanych w tym okresie obejmują Bośnię i Hercegowinę Banku Światowego Krajowa Strategia Pomocy, która zapewniła finansowanie projektów infrastrukturalnych, rozwoju instytucjonalnego i usług społecznych; unijny program CARDS, który wspierał reformy gospodarcze i integrację z UE; oraz programy USAID koncentrowały się na promowaniu wzrostu gospodarczego, wzmacnianiu społeczeństwa obywatelskiego i poprawie zarządzania.\n\nOgółem programy te zapewniły Bośni i Hercegowinie krytyczne wsparcie finansowe i techniczne w okresie znaczącej odbudowy i transformacji, pomagając krajowi w ustabilizowaniu się i ustabilizowaniu sytuacji podstawa przyszłego wzrostu i rozwoju.§W\n--------------\n§!Będzie §RAnulowanie§! jeśli nie ma §YSFOR§!"
+ bos_international_funding_desc: "Utworzono różnorodne programy mające na celu zapewnienie pomocy finansowej Bośni i Hercegowinie po wojnie w Bośni. Programy te zostały ustanowione przez różne organizacje międzynarodowe, w tym między innymi Bank Światowy, Unię Europejską (UE), Program Narodów Zjednoczonych ds. Rozwoju (UNDP) i Agencję Rozwoju Międzynarodowego Stanów Zjednoczonych (USAID).\n\nOgólny celem tych programów było wsparcie wysiłków Bośni na rzecz odbudowy i rozwoju, które obejmowały odbudowę infrastruktury, poprawę zarządzania i usług publicznych, promowanie rozwoju gospodarczego i wspieranie włączenia społecznego. Konkretne inicjatywy finansowane w ramach tych programów były różne, ale często skupiały się na obszarach takich jak edukacja, opieka zdrowotna, mieszkalnictwo, tworzenie miejsc pracy i wzmacnianie instytucji demokratycznych.\n\nNiektóre przykłady konkretnych inicjatyw finansowanych w tym okresie obejmują Bośnię i Hercegowinę Banku Światowego Krajowa Strategia Pomocy, która zapewniła finansowanie projektów infrastrukturalnych, rozwoju instytucjonalnego i usług społecznych; unijny program CARDS, który wspierał reformy gospodarcze i integrację z UE; oraz programy USAID koncentrowały się na promowaniu wzrostu gospodarczego, wzmacnianiu społeczeństwa obywatelskiego i poprawie zarządzania.\n\nOgółem programy te zapewniły Bośni i Hercegowinie krytyczne wsparcie finansowe i techniczne w okresie znaczącej odbudowy i transformacji, pomagając krajowi w ustabilizowaniu się i ustabilizowaniu sytuacji podstawa przyszłego wzrostu i rozwoju.\n§W---------------§!\nTen pomysł §RUsuń§! jeśli nie ma §YSFOR§! pomysł."
  BOS_croats_declares_indpend_hidden: "Członkostwo dla nowych państw"
  BOS_unlocks_prep_for_srpska_war: "£decision_icon_small §YOdblokowuje§! Przygotuj się na wojnę domową w Bośni i Serbii §Ydecyzje§!"
  BOS_unlocks_EUFOR: "£decision_icon_small §YOdblokowuje§! Ustanów EUFOR §Ydecyzje§!\nPo usunięciu §tSFOR§!"
@@ -496,10 +495,9 @@
  bos_croat_stability_will_rise_tt: ""
  bos_srpska_stability_will_rise_tt: ""
  bos_bosniak_stability_will_rise_tt: ""
- if_a_strike_happens_this_may_lead_to_a_shift_in_goverment_tt: "Jeśli dojdzie do strajku, może to doprowadzić do zmiany rządu"
- with_out_the_required_euipment_and_support_are_mining_industy_will_collapse_tt: "§Bez niezbędnego wsparcia górnictwo upadnie §!"
- bos_this_foucs_will_give_more_rewards_if_you_do_both_of_the_requirements: "To skupienie daje różne efekty, jeśli spełnisz jego warunki §"
- with_out_the_required_euipment_and_support_are_farming_industy_will_collapse_tt: "§Bez niezbędnego wsparcia rolnictwo upadnie §!"
+ with_out_the_required_euipment_and_support_are_mining_industy_will_collapse_tt: "§RBez niezbędnego wsparcia górnictwo upadnie§!"
+ bos_this_foucs_will_give_more_rewards_if_you_do_both_of_the_requirements: "§RTo skupienie daje różne efekty, jeśli spełnisz jego warunki§!"
+ with_out_the_required_euipment_and_support_are_farming_industy_will_collapse_tt: "§RBez niezbędnego wsparcia rolnictwo upadnie§!"
  bos_investment: "Te Narody będą bardziej otwarte na inwestowanie w nas"
  BOS_more_likely_to_send_support: "Bardziej prawdopodobne, że wyśle ​​wsparcie w przypadku konfliktu"
  BOS_more_likely_to_send_intervention_forces: "Bardziej prawdopodobne, że wyślą siły interwencyjne"
@@ -606,7 +604,7 @@
  hzg_fed: "Federacja Hercegowiny"
  rsk_fed: "Federacja Serbska"
  bos_srpska_colour_change3: "Wielka Serbska"
- RULE_BOSNIA_CANT_GET_RID_OF_NATIONS: "§R Nie można wydalić narodów z Federacji §!"
+ RULE_BOSNIA_CANT_GET_RID_OF_NATIONS: "§RNie można wydalić narodów z Federacji§!"
  bos_war_civil_war: "Wojna domowa w Bośni"
  Bosnia.1.t: "Wojna domowa w Bośni"
  Bosnia.1.d: "Bośnia po raz kolejny popadła w konflikt domowy z Republiką Serbską, ogłaszając niepodległość od większego państwa federalnego Bośni. Rosnące napięcie narastało już od jakiegoś czasu i konflikt ten był nieunikniony. Ogłosimy zwycięstwo nad tymi zdrajcami. Bez względu na koszt."
@@ -625,14 +623,14 @@
  Bosnia.11.a: "Wzrośnie większa przyjaźń między państwami"
  Bosnia.12.t: "Strajk rolników"
  Bosnia.12.d: "Wiele osób w całym kraju odczuwa głód z powodu braku jedzenia na talerzach. Wielu wyszło na ulice w proteście przeciwko rządowi. chcieli, aby rząd podjął działania wspierające kręgosłup narodu. Wielu wzywało do zmiany rządu. Czy poddamy się tym żądaniom"
- Bosnia.12.a: "Konieczna jest zmiana w rządzie"
+ Bosnia.12.a: "Konieczna jest zmiana rządu"
  Bosnia.12.b: "Osiągnij porozumienie"
  Bosnia.13.t: "Osiągnij porozumienie"
  Bosnia.13.d: "Wielu wzywało do pokoju i zaprzestania protestów. Dziś rząd podpisał umowę, która wesprze prace. Teraz i w przyszłość."
  Bosnia.13.a: "Umowa, którą musieliśmy zawrzeć"
  Bosnia.14.t: "Strajk górników"
  Bosnia.14.d: "Wiele osób w branży wydobywczej wzywało do lepszych wynagrodzeń. Lepsze godziny pracy i ochrona przed trudnymi warunkami. Jeden z pracowników powiedział: „Wolałbym być w Brazylii”. Ten wiec i bójki trwają i nie ustaną. Czy poddamy się tym żądaniom"
- Bosnia.14.a: "Konieczna jest zmiana w rządzie"
+ Bosnia.14.a: "Konieczna jest zmiana rządu"
  Bosnia.14.b: "Osiągnij porozumienie"
  Bosnia.9.t: "[From.Owner.GetName] Poproś o pomoc turecką"
  Bosnia.9.d: "Naród Bośni po raz kolejny pogrążony jest w chaosie i prosi o pomoc. Proszą nas o dostarczenie broni lokalnym siłom bośniackim. Może to być zmiana mająca na celu odzyskanie przyczółka na Bałkanach lub może nie być warta wysiłku."
@@ -647,7 +645,7 @@
  Bosnia.34.a: "NIE"
  Bosnia.35.t: "Rosja zgodziła się pozwolić nam przystąpić do OUBZ."
  Bosnia.35.d: "Jesteśmy obecnie w pakcie obronnym z innymi krajami poradzieckimi i jeśli któryś z nich zostanie zaatakowany, zostaniemy wezwani do wojny."
- Bosnia.35.a: "dobre wieści"
+ Bosnia.35.a: "Dobra wiadomość"
  Bosnia.36.t: "Rosja odrzuciła członkostwo w OUBZ"
  Bosnia.36.d: "Rosja odrzuciła członkostwo, ponieważ stanowimy zbyt duże ryzyko, aby być częścią poradzieckiego paktu obronnego."
  Bosnia.36.a: "Złe wieści"
@@ -666,10 +664,10 @@
  bosnia_political.4.b: "Serbski lider"
  bosnia_political.5.t: "Krach finansowy"
  bosnia_political.5.d: "Globalny krach gospodarczy, który przetoczył się przez cały świat, dotknął Bośnię, powodując upadek wielu gałęzi przemysłu. I długa droga powrotu do zdrowia."
- bosnia_political.5.a: "mroczne czasy"
+ bosnia_political.5.a: "Mroczne czasy"
  bosnia_political.6.t: "Miłorad Dodik"
  bosnia_political.6.d: "Milorad Dodik właśnie objął przywództwo w Republice Serbskiej, dążąc do uzyskania niepodległości od Bośni. Milorad Dodik ma nacjonalistyczne ambicje w stosunku do swojej partii, obiecując nacjonalistyczną tożsamość serbską, dając bezczynność, której szukali."
- bosnia_political.6.a: "mroczne czasy"
+ bosnia_political.6.a: "Mroczne czasy"
  bosnia_political.7.t: "Wojna w Bośni i Serbii"
  bosnia_political.7.d: "Bośnia po raz kolejny pogrążyła się w konflikcie domowym z Republiką Serbską, która ogłosiła niepodległość od większego państwa federalnego Bośni. Rosnące napięcie narastało już od jakiegoś czasu i konflikt ten był nieunikniony. Ogłosimy zwycięstwo nad tymi zdrajcami. Bez względu na koszt."
  bosnia_political.7.a: "Serbia zjednoczyła się"
@@ -726,7 +724,7 @@
  Bosnia_bosnia_random: ""
  Bosnia_serb_random: ""
  Bosnia_croat_random: ""
- decision_cost_civ_factory_1: "decyzja_koszt_civ_factory_1"
+ decision_cost_civ_factory_1: "Koszt fabryki cywilnej"
  armor: "zbroja"
  event_chain_will_fire: ""
  BOS_refection_of_are_doctrine: ""
@@ -844,3 +842,5 @@
  bosnia_political.24.t: "Demokracja w Bośni znajduje się pod presją"
  bosnia_political.24.d: "Naród Bośni znalazł się w trudnej sytuacji, gdy obecny pełniący obowiązki przywódcy państwa odmówił ustąpienia ze stanowiska. Wielu mieszkańców kraju było sfrustrowanych tym posunięciem, nazywając je aktem herezji i podważającym porozumienia zawarte w porozumieniu z Dayton."
  bosnia_political.24.a: "To nie może być dobra wiadomość"
+ Bosnian_political_reformer: "Reformator polityczny"
+ if_a_strike_happens_this_may_lead_to_a_shift_in_government_tt: "Jeśli dojdzie do strajku, może to doprowadzić do zmiany rządu"
