--- a/localisation/polish/MD_ideas_political_parties_l_polish.yml
+++ b/localisation/polish/MD_ideas_political_parties_l_polish.yml
@@ -49,7 +49,7 @@
  AFG_ruling_party_fundamental_islamist: "Hizb ut-Tahrir"
  FIN_ruling_party_libertarian: "Kokoomus"
  FIN_ruling_party_social_liberal: "Kluseczka"
- FIN_ruling_party_social_conservative: "Kristillisdemokraatit"
+ FIN_ruling_party_social_conservative: "Chrześcijańscy Demokraci"
  FIN_ruling_party_social_democrat: "Socjalistyczna demokracja"
  POL_ruling_party_communist: "Polska Partia Komunistyczna"
  POL_ruling_party_socialist: "Polska Partia Socjalistyczna"
