--- a/localisation/polish/MD_middle_east_content_l_polish.yml
+++ b/localisation/polish/MD_middle_east_content_l_polish.yml
@@ -739,11 +739,11 @@
  gcc.21.t: "[FROM.GetNameDef] Przystępuje do Rady Współpracy Zatoki Perskiej"
  gcc.21.d: "Po długim procesie akcesyjnym [FROM.GetNameDef] udało się zapewnić sobie członkostwo w Radzie Współpracy Zatoki Perskiej, organizacji regionalnej założonej przez [SAU.GetNameDef], [BHR.GetNameDef], [KUW.GetNameDef], [OMA.GetNameDef], [QAT.GetNameDef] i [UAE.GetNameDef]. Rozwój ten oznacza znaczącą ekspansję GCC, która przez długi czas nieufnie podchodziła do przyjmowania nowych członków w swoje szeregi. [FROM.GetNameDef] będzie teraz mógł skorzystać z szeregu korzyści gospodarczych, politycznych i wojskowych, jakie zapewnia członkostwo w GCC."
  gcc.21.a: "GCC rośnie w siłę..."
- gcc.22.t: "[FROM.GetAdjective] żądają sprzedaży broni bloku do GCC"
+ gcc.22.t: "[FROM.GetAdjective] żąda od grupy sprzedaży broni GCC"
  gcc.22.d: "Rada Współpracy Zatoki Perskiej historycznie sprzymierzyła się z rządem [ROOT.GetAdjective] i dlatego jest ważnym sojusznikiem [ROOT.GetAdjective] w świecie arabskim. Członkowie [FROM.GetAdjective] argumentowali, że przyznanie GCC sprzedaży broni przez blok pomoże im w obronie przed naszymi wspólnymi wrogami, zapewniając członkom GCC bardzo potrzebną broń i zwiększając interoperacyjność ich sił."
  gcc.22.a: "Dajmy im broń."
  gcc.22.b: "Potrzebujemy ich dla siebie."
- gcc.23.t: "[FROM.GetNameDef] Finalizuje sprzedaż broni przez Blok GCC"
+ gcc.23.t: "[FROM.GetNameDef] Finalizuje sprzedaż broni Grupy GCC"
  gcc.23.d: "W odpowiedzi na prośbę państw członkowskich Rady Współpracy Zatoki Perskiej, [FROM.GetAdjective] zatwierdził sprzedaż broni przez blok całej organizacji. Posunięcie to było reklamowane jako sygnał rosnącej jedności GCC, ponieważ w przeszłości różne siły zbrojne GCC były niezintegrowane i nieskoordynowane, co zostało zaostrzone przez zamawianie przez nie broni od różnych dostawców. [FROM.GetLeader] wyraził nadzieję, że sprzedaż ta pomoże GCC skuteczniej zwalczać wspólne zagrożenia na Bliskim Wschodzie. Ze swojej strony państwa Zatoki Perskiej wchodzące w skład GCC wyraziły radość z powodzenia tego porozumienia."
  gcc.24.t: "[FROM.GetNameDef] wywiera na nas presję, abyśmy wspierali nowego członka GCC"
  gcc.24.d: "[pressured_to_accept] obecnie ubiega się o członkostwo w Radzie Współpracy Zatoki Perskiej i wspiera go w tym przedsięwzięciu [FROM.GetNameDef]. Powinniśmy rozważyć, czy wspierać wysiłki [pressured_to_accept]."
