--- a/localisation/russian/MD_countries_cosmetic_l_russian.yml
+++ b/localisation/russian/MD_countries_cosmetic_l_russian.yml
@@ -3327,107 +3327,107 @@
  ALG_autonomy_uar_state: "Государство Алжир"
  ALG_autonomy_uar_province: "Алжирская провинция"
  ALG_autonomy_uar_regional_command: "Алжирское баасистское региональное командование"
- TUN_autonomy_uar_state: "State of Tunisia"
- TUN_autonomy_uar_province: "Tunisian Province"
- TUN_autonomy_uar_regional_command: "Tunisian Ba'athist Regional Command"
- LBA_autonomy_uar_state: "State of Libya"
- LBA_autonomy_uar_province: "Libyan Province"
- LBA_autonomy_uar_regional_command: "Libyan Ba'athist Regional Command"
- EGY_autonomy_uar_state: "State of Egypt"
- EGY_autonomy_uar_province: "Egyptian Province"
- EGY_autonomy_uar_regional_command: "Egyptian Ba'athist Regional Command"
- SUD_autonomy_uar_state: "State of Sudan"
- SUD_autonomy_uar_province: "Sudanese Province"
- SUD_autonomy_uar_regional_command: "Sudanese Ba'athist Regional Command"
- PAL_autonomy_uar_state: "State of Palestine"
- PAL_autonomy_uar_province: "Palestinian Province"
- PAL_autonomy_uar_regional_command: "Palestinian Ba'athist Regional Command"
- HAM_autonomy_uar_state: "State of Gaza"
- HAM_autonomy_uar_province: "Gazan Province"
- HAM_autonomy_uar_regional_command: "Gazan Ba'athist Regional Command"
- JOR_autonomy_uar_state: "State of Jordan"
- JOR_autonomy_uar_province: "Jordanian Province"
- JOR_autonomy_uar_regional_command: "Jordanian Ba'athist Regional Command"
- LEB_autonomy_uar_state: "State of Lebanon"
- LEB_autonomy_uar_province: "Lebanese Province"
- LEB_autonomy_uar_regional_command: "Lebanese Ba'athist Regional Command"
- HEZ_autonomy_uar_state: "State of Jabal Amil"
- HEZ_autonomy_uar_province: "Jabal Amil Province"
- HEZ_autonomy_uar_regional_command: "Jabal Amil Ba'athist Regional Command"
- SYR_autonomy_uar_state: "State of Syria"
- SYR_autonomy_uar_province: "Syrian Province"
- SYR_autonomy_uar_regional_command: "Syrian Ba'athist Regional Command"
- FSA_autonomy_uar_state: "State of Syria"
- FSA_autonomy_uar_province: "Syrian Province"
+ TUN_autonomy_uar_state: "Государство Тунис"
+ TUN_autonomy_uar_province: "Тунисская провинция"
+ TUN_autonomy_uar_regional_command: "Тунисское региональное командование баасистов"
+ LBA_autonomy_uar_state: "Государство Ливия"
+ LBA_autonomy_uar_province: "Ливийская провинция"
+ LBA_autonomy_uar_regional_command: "Ливийское региональное командование баасистов"
+ EGY_autonomy_uar_state: "Государство Египет"
+ EGY_autonomy_uar_province: "Египетская провинция"
+ EGY_autonomy_uar_regional_command: "Египетское баасистское региональное командование"
+ SUD_autonomy_uar_state: "Государство Судан"
+ SUD_autonomy_uar_province: "Суданская провинция"
+ SUD_autonomy_uar_regional_command: "Суданское региональное командование баасистов"
+ PAL_autonomy_uar_state: "Государство Палестина"
+ PAL_autonomy_uar_province: "Палестинская провинция"
+ PAL_autonomy_uar_regional_command: "Палестинское баасистское региональное командование"
+ HAM_autonomy_uar_state: "Государство Газа"
+ HAM_autonomy_uar_province: "Провинция Газан"
+ HAM_autonomy_uar_regional_command: "Региональное командование Баасистов в Газе"
+ JOR_autonomy_uar_state: "Государство Иордания"
+ JOR_autonomy_uar_province: "Иорданская провинция"
+ JOR_autonomy_uar_regional_command: "Иорданское баасистское региональное командование"
+ LEB_autonomy_uar_state: "Государство Ливан"
+ LEB_autonomy_uar_province: "Ливанская провинция"
+ LEB_autonomy_uar_regional_command: "Ливанское региональное командование баасистов"
+ HEZ_autonomy_uar_state: "Штат Джебель-Амиль"
+ HEZ_autonomy_uar_province: "Провинция Джебель-Амиль"
+ HEZ_autonomy_uar_regional_command: "Региональное командование Баасистов Джабаль Амиль"
+ SYR_autonomy_uar_state: "Государство Сирия"
+ SYR_autonomy_uar_province: "Сирийская провинция"
+ SYR_autonomy_uar_regional_command: "Сирийское баасистское региональное командование"
+ FSA_autonomy_uar_state: "Государство Сирия"
+ FSA_autonomy_uar_province: "Сирийская провинция"
  FSA_autonomy_uar_regional_command: "Сирийское баасистское региональное командование"
  NUS_autonomy_uar_state: "Государство Сирия"
  NUS_autonomy_uar_province: "Сирийская провинция"
  NUS_autonomy_uar_regional_command: "Сирийское баасистское региональное командование"
  DRU_autonomy_uar_state: "Государство Джабаль ад-Друз"
  DRU_autonomy_uar_province: "Провинция Джабаль ад-Друз"
- DRU_autonomy_uar_regional_command: "Jabal Al-Druze Ba'athist Regional Command"
- ALA_autonomy_uar_state: "State of Latakia"
- ALA_autonomy_uar_province: "Latakian Province"
- ALA_autonomy_uar_regional_command: "Latakian Ba'athist Regional Command"
- ISI_autonomy_uar_state: "State of Mesopotamia"
- ISI_autonomy_uar_province: "Mesopotamian Province"
- ISI_autonomy_uar_regional_command: "Mesopotamian Ba'athist Regional Command"
- ISQ_autonomy_uar_state: "State of Iraq"
- ISQ_autonomy_uar_province: "Iraqi Province"
- ISQ_autonomy_uar_regional_command: "Iraqi Ba'athist Regional Command"
- KUW_autonomy_uar_state: "State of Kuwait"
- KUW_autonomy_uar_province: "Kuwaiti Province"
- KUW_autonomy_uar_regional_command: "Kuwaiti Ba'athist Regional Command"
- SAU_autonomy_uar_state: "State of Arabia"
- SAU_autonomy_uar_province: "Arabian Province"
- SAU_autonomy_uar_regional_command: "Arabian Ba'athist Regional Command"
- HEJ_autonomy_uar_state: "State of Hejaz"
- HEJ_autonomy_uar_province: "Hejazi Province"
- HEJ_autonomy_uar_regional_command: "Hejazi Ba'athist Regional Command"
- NEJ_autonomy_uar_state: "State of Nejd"
- NEJ_autonomy_uar_province: "Nejdi Province"
- NEJ_autonomy_uar_regional_command: "Nejdi Ba'athist Regional Command"
- QTF_autonomy_uar_state: "State of Qatif"
- QTF_autonomy_uar_province: "Qatifi Province"
- QTF_autonomy_uar_regional_command: "Qatifi Ba'athist Regional Command"
- BHR_autonomy_uar_state: "State of Bahrain"
- BHR_autonomy_uar_province: "Bahraini Province"
- BHR_autonomy_uar_regional_command: "Bahraini Ba'athist Regional Command"
- QTR_autonomy_uar_state: "State of Qatar"
- QTR_autonomy_uar_province: "Qatari Province"
- QTR_autonomy_uar_regional_command: "Qatari Ba'athist Regional Command"
- UAE_autonomy_uar_state: "State of the Gulf"
- UAE_autonomy_uar_province: "the Gulf Province"
- UAE_autonomy_uar_regional_command: "the Gulf Ba'athist Regional Command"
- OMA_autonomy_uar_state: "State of Oman"
- OMA_autonomy_uar_province: "Omani Province"
- OMA_autonomy_uar_regional_command: "Omani Ba'athist Regional Command"
- YEM_autonomy_uar_state: "State of Yemen"
- YEM_autonomy_uar_province: "Yemeni Province"
- YEM_autonomy_uar_regional_command: "Yemeni Ba'athist Regional Command"
- HOU_autonomy_uar_state: "State of Yemen"
- HOU_autonomy_uar_province: "Yemeni Province"
- HOU_autonomy_uar_regional_command: "Yemeni Ba'athist Regional Command"
- AQY_autonomy_uar_state: "State of Yemen"
- AQY_autonomy_uar_province: "Yemeni Province"
- AQY_autonomy_uar_regional_command: "Yemeni Ba'athist Regional Command"
- PER_Zoroastrian_Flag: "Zoroastrian Solidarity Movement"
- PER_Zoroastrian_Flag_DEF: "Yazd Underground Army"
+ DRU_autonomy_uar_regional_command: "Джабаль аль-Друзское региональное командование баасистов"
+ ALA_autonomy_uar_state: "Штат Латакия"
+ ALA_autonomy_uar_province: "Провинция Латакиан"
+ ALA_autonomy_uar_regional_command: "Латакианское баасистское региональное командование"
+ ISI_autonomy_uar_state: "Государство Месопотамия"
+ ISI_autonomy_uar_province: "Месопотамская провинция"
+ ISI_autonomy_uar_regional_command: "Месопотамское региональное командование баасистов"
+ ISQ_autonomy_uar_state: "Государство Ирак"
+ ISQ_autonomy_uar_province: "Иракская провинция"
+ ISQ_autonomy_uar_regional_command: "Иракское баасистское региональное командование"
+ KUW_autonomy_uar_state: "Государство Кувейт"
+ KUW_autonomy_uar_province: "Кувейтская провинция"
+ KUW_autonomy_uar_regional_command: "Кувейтское региональное командование баасистов"
+ SAU_autonomy_uar_state: "Государство Аравия"
+ SAU_autonomy_uar_province: "Арабская провинция"
+ SAU_autonomy_uar_regional_command: "Региональное командование арабских баасистов"
+ HEJ_autonomy_uar_state: "Штат Хиджаз"
+ HEJ_autonomy_uar_province: "Провинция Хиджази"
+ HEJ_autonomy_uar_regional_command: "Хиджази-баасистское региональное командование"
+ NEJ_autonomy_uar_state: "Штат Неджд"
+ NEJ_autonomy_uar_province: "Провинция Неджди"
+ NEJ_autonomy_uar_regional_command: "Региональное командование Неджди-Баас"
+ QTF_autonomy_uar_state: "Штат Катиф"
+ QTF_autonomy_uar_province: "Провинция Катифи"
+ QTF_autonomy_uar_regional_command: "Региональное командование Катифи Баас"
+ BHR_autonomy_uar_state: "Государство Бахрейн"
+ BHR_autonomy_uar_province: "Провинция Бахрейн"
+ BHR_autonomy_uar_regional_command: "Бахрейнское региональное командование баасистов"
+ QTR_autonomy_uar_state: "Государство Катар"
+ QTR_autonomy_uar_province: "Катарская провинция"
+ QTR_autonomy_uar_regional_command: "Катарское региональное командование баасистов"
+ UAE_autonomy_uar_state: "Состояние Персидского залива"
+ UAE_autonomy_uar_province: "Провинция Персидского залива"
+ UAE_autonomy_uar_regional_command: "Региональное командование Баасистов Персидского залива"
+ OMA_autonomy_uar_state: "Государство Оман"
+ OMA_autonomy_uar_province: "Провинция Оман"
+ OMA_autonomy_uar_regional_command: "Оманское баасистское региональное командование"
+ YEM_autonomy_uar_state: "Государство Йемен"
+ YEM_autonomy_uar_province: "Йеменская провинция"
+ YEM_autonomy_uar_regional_command: "Йеменское региональное командование баасистов"
+ HOU_autonomy_uar_state: "Государство Йемен"
+ HOU_autonomy_uar_province: "Йеменская провинция"
+ HOU_autonomy_uar_regional_command: "Йеменское региональное командование баасистов"
+ AQY_autonomy_uar_state: "Государство Йемен"
+ AQY_autonomy_uar_province: "Йеменская провинция"
+ AQY_autonomy_uar_regional_command: "Йеменское региональное командование баасистов"
+ PER_Zoroastrian_Flag: "Зороастрийское движение солидарности"
+ PER_Zoroastrian_Flag_DEF: "Подземная армия Йезда"
  PER_Zoroastrian_Flag_ADJ: "Иранский"
- PER_Zoroastrian_state_Flag: "ērān"
- PER_Zoroastrian_state_Flag_DEF: "ērān "
+ PER_Zoroastrian_state_Flag: "Эран"
+ PER_Zoroastrian_state_Flag_DEF: "Эран"
  PER_Zoroastrian_State_Flag_ADJ: "Иранский"
- PER_Zoroastrian_Empire_Flag: "Iranshahr"
- PER_Zoroastrian_Empire_Flag_DEF: "Iranshahr"
+ PER_Zoroastrian_Empire_Flag: "Ираншехр"
+ PER_Zoroastrian_Empire_Flag_DEF: "Ираншехр"
  PER_Zoroastrian_Empire_Flag_ADJ: "Иранский"
- IRQ_sunni_revolt_name: "Iraqi Freedom Front"
- IRQ_sunni_revolt_name_DEF: "the Iraqi Freedom Front"
+ IRQ_sunni_revolt_name: "Иракский фронт свободы"
+ IRQ_sunni_revolt_name_DEF: "Иракский фронт свободы"
  IRQ_sunni_revolt_name_ADJ: "Иракский"
- IRQ_shia_revolt: "Jaysh Al-Mahdi"
- IRQ_shia_revolt_DEF: "Jaysh Al-Mahdi"
+ IRQ_shia_revolt: "Джейш Аль-Махди"
+ IRQ_shia_revolt_DEF: "Джейш Аль-Махди"
  IRQ_shia_revolt_ADJ: "Иракский"
- IRQ_badr_revolt: "Munazzama Badr"
- IRQ_badr_revolt_DEF: "Munazzama Badr"
+ IRQ_badr_revolt: "Организация Бадра"
+ IRQ_badr_revolt_DEF: "Организация Бадра"
  IRQ_badr_revolt_ADJ: "Иракский"
  ISIS_SAHEL: "Сахельская республика"
  ISIS_SAHEL_DEF: "Сахельская республика"
@@ -3441,15 +3441,15 @@
  LBA_KINGDOM: "Королевство Ливия"
  LBA_KINGDOM_DEF: "Королевство Ливия"
  LBA_KINGDOM_ADJ: "Ливийск."
- FEZ_autonomy_uar_state: "State of Fezzan"
- FEZ_autonomy_uar_province: "Fezzani Province"
- FEZ_autonomy_uar_regional_command: "Fezzani Ba'athist Regional Command"
- CYR_autonomy_uar_state: "State of Cyrenaica"
- CYR_autonomy_uar_province: "Cyrenaican Province"
- CYR_autonomy_uar_regional_command: "Cyrenaican Ba'athist Regional Command"
- TRP_autonomy_uar_state: "State of Tripolitania"
- TRP_autonomy_uar_province: "Tripolitanian Province"
- TRP_autonomy_uar_regional_command: "Tripolitanian Ba'athist Regional Command"
+ FEZ_autonomy_uar_state: "Штат Феццан"
+ FEZ_autonomy_uar_province: "Провинция Феццани"
+ FEZ_autonomy_uar_regional_command: "Региональное командование Баасистов Феццани"
+ CYR_autonomy_uar_state: "Штат Киренаика"
+ CYR_autonomy_uar_province: "Провинция Киренаикан"
+ CYR_autonomy_uar_regional_command: "Киренаикское баасистское региональное командование"
+ TRP_autonomy_uar_state: "Государство Триполитания"
+ TRP_autonomy_uar_province: "Триполитанская провинция"
+ TRP_autonomy_uar_regional_command: "Триполитанское региональное командование баасистов"
  BSH_IDL: "Идель-Урал"
  BSH_IDL_DEF: "Идель-Урал"
  BSH_IDL_ADJ: "Идель-Урал"
@@ -3599,3 +3599,30 @@
  PER_REB: "Революционный совет Ирана"
  PER_REB_DEF: "Революционный совет Ирана"
  PER_REB_ADJ: "Иранский"
+ SSU_SPLA: "Народно-освободительная армия Судана"
+ SSU_SPLA_DEF: "Народно-освободительная армия Судана"
+ SSU_SPLA_ADJ: "Суданский повстанец"
+ SSU_AZANIA: "Азания"
+ SSU_AZANIA_DEF: "Азания"
+ SSU_AZANIA_ADJ: "азанский"
+ SSU_NILE: "Республика Нил"
+ SSU_NILE_DEF: "Республика Нил"
+ SSU_NILE_ADJ: "Нил"
+ SSU_KUSH: "Республика Куш"
+ SSU_KUSH_DEF: "Республика Куш"
+ SSU_KUSH_ADJ: "Куш"
+ NEW_SUDAN: "Новый Судан"
+ NEW_SUDAN_DEF: "Новый Судан"
+ NEW_SUDAN_ADJ: "Суданск"
+ DAR_DLF: "Фронт освобождения Дарфура"
+ DAR_DLF_DEF: "Фронт освобождения Дарфура"
+ DAR_DLF_ADJ: "Дарфури"
+ SUD_SPLMN: "Народно-освободительное движение Судана-Север"
+ SUD_SPLMN_DEF: "Народно-освободительное движение Судана-Север"
+ SUD_SPLMN_ADJ: "Суданский повстанец"
+ SUD_SRF: "Суданский революционный фронт"
+ SUD_SRF_DEF: "Суданский революционный фронт"
+ SUD_SRF_ADJ: "Суданский повстанец"
+ SSU_SUD_autonomy_autonomous_state: "Южный Суданский автономный район"
+ SSU_SUD_autonomy_autonomous_state_DEF: "Южный Суданский автономный район"
+ SSU_SUD_autonomy_autonomous_state_ADJ: "Южносуданск"
