--- a/localisation/russian/MD_focus_POL_l_russian.yml
+++ b/localisation/russian/MD_focus_POL_l_russian.yml
@@ -3049,17 +3049,17 @@
  POL_communist_uprising_in_dolny_slask: "Коммунистическое восстание в Нижней Силезии"
  POL_communist_uprising_in_warmia_i_mazury: "Коммунистическое восстание в Вармии и Мазурах"
  POL_civ_mil_category: "Экономика и военные проекты"
- POL_civ_mil_category_desc: "Democrats failed to fix what the communists screwed up before 1989. That is why we must rebuild Poland's economy."
- POL_improve_coast_line: "Improve Coastline"
- POL_improve_coast_line_desc: "The coastline shouldn't be a high priority for us, but it's worth having some protection."
- POL_modernize_office_sectors: "Modernize Office Sectors"
- POL_modernize_office_sectors_desc: "This couldn't be avoided. Chaos in the administration because of a nationwide revolution. Who could have expected this..."
- POL_start_advanced_training_program: "Start Advanced Training Program"
- POL_start_advanced_training_program_desc: "Instead of focusing solely on the land army, we also need to make sure we win in the air."
- POL_save_the_revolution: "§RSave The Revolution!§!"
- POL_save_the_revolution_desc: "Everything has failed! We have to do everything to keep our influence in the country!"
- POL_new_solidarity_final_strike: "§CNew Solidarity Final Strike§!"
- POL_new_solidarity_final_strike_desc: "New Solidarity is ready, in cooperation with the government, to end our revolution. The army is arming itself against us, but we will not give up so easily!"
+ POL_civ_mil_category_desc: "Демократам не удалось исправить то, что коммунисты натворили до 1989 года. Вот почему мы должны восстановить экономику Польши."
+ POL_improve_coast_line: "Улучшить береговую линию"
+ POL_improve_coast_line_desc: "Береговая линия не должна быть для нас приоритетом, но иметь некоторую защиту стоит."
+ POL_modernize_office_sectors: "Модернизация офисных секторов"
+ POL_modernize_office_sectors_desc: "Этого нельзя было избежать. Хаос в администрации из-за общенациональной революции. Кто мог этого ожидать..."
+ POL_start_advanced_training_program: "Начать программу повышения квалификации"
+ POL_start_advanced_training_program_desc: "Вместо того, чтобы сосредотачиваться исключительно на сухопутной армии, нам также необходимо добиться победы в воздухе."
+ POL_save_the_revolution: "§RСпасите революцию!§!"
+ POL_save_the_revolution_desc: "Все провалилось! Мы должны сделать все, чтобы сохранить свое влияние в стране!"
+ POL_new_solidarity_final_strike: "§CНовый финальный удар солидарности§!"
+ POL_new_solidarity_final_strike_desc: "«Новая Солидарность» готова в сотрудничестве с правительством положить конец нашей революции. Против нас вооружается армия, но мы так просто не сдадимся!"
  POL_corruption_Scandal_Soc_1_TT: "В рамках кампании по ребрендингу большая часть партийной поддержки будет перенаправлена на ГП!"
  POL_corruption_Scandal_Soc_2_TT: "ПиС, скорее всего, извлечёт из этого выгоду!"
  POL_corruption_Scandal_Con_1_TT: "Другие партии могут нацелиться на нас в следующей избирательной кампании!"
@@ -3179,51 +3179,51 @@
  POL_banned_communism_TT: "§RЗапретит все коммунистические партии§!"
  POL_choose_aggressive_way: "§YВыбран агрессивный вариант§!"
  POL_choose_democratic_way: "§YВыбран демократический вариант§!"
- POL_decrease_ss_TT: "Decrease §CSolidarity Strength§!\n"
- POL_decrease_es_TT: "Decrease §GEconomy Status§!\n"
- POL_decrease_cd_TT: "Decrease §RCommunism Domination§!\n"
- POL_check_ss_support_equals_one_TT: "§YLech Wałęsa Return§! is §Rnot§! active"
- POL_check_es_support_equals_one_TT: "§YStable Economy§! is §Rnot§! active"
- POL_increase_ss_TT: "Increase §CSolidarity Strength§!\n"
- POL_increase_es_TT: "Increase §GEconomy Status§!\n"
- POL_increase_cd_TT: "Increase §RCommunism Domination§!\n"
+ POL_decrease_ss_TT: "Снижаться§CСила солидарности§!\n"
+ POL_decrease_es_TT: "Снижаться§GСтатус экономики§!\n"
+ POL_decrease_cd_TT: "Снижаться§RДоминирование коммунизма§!\n"
+ POL_check_ss_support_equals_one_TT: "§YELich Валенса Возвращение§! §RНе§! активный"
+ POL_check_es_support_equals_one_TT: "§YСтабильная экономика§! §RНе§! активный"
+ POL_increase_ss_TT: "Увеличивать§CСила солидарности§!\n"
+ POL_increase_es_TT: "Увеличивать§GСтатус экономики§!\n"
+ POL_increase_cd_TT: "Увеличьте §RCкоммунистическое господство§!\n"
  POL_line_TT: "---------------------------------------------------------------"
- POL_check_cd_support_equals_one_TT: "§YBeginning of the revolution§! is active"
- POL_check_cd_support_equals_two_TT: "§YArmy Support§! is active"
- POL_check_cd_support_equals_three_TT: "§YOverthrow The Government§! is active"
- POL_check_cd_support_equals_four_TT: "§YOne Party State§! is active"
- POL_leave_nato_warning_TT: "§RWARNING!\nIf ZKP will overthrow the government, Poland will be kicked from NATO!§!"
- POL_increase_es_and_ss_auto_TT: "\n§YThis option will decrease§! §GEconomy Status Increase§! §Ydecision timeout to§! §R45§! §Ydays§!\n§YThis option will decrease§! §CSolidarity Strength Increase§! §Ydecision timeout to§! §R30§! §Ydays§!\n"
- POL_prepare_the_coup_fail: "§RCoup failed§!"
- POL_crush_new_solidarity1: "Politicians has been silenced"
- POL_crush_new_solidarity2: "Curfew has been activated"
- POL_crush_new_solidarity3: "New law has been introduced"
- POL_crush_new_solidarity4: "Borders are closed"
- POL_prepare_the_coup_activation: "Preparing for the coup"
- POL_new_solidarity_revolution_crushed: "New Solidarity revolution crushed"
- POL_prepare_the_coup_activation2: "§RMilitary assassination succeed§!"
- POL_communism_uprising_again_activation: "§RCommunism Uprising Again§! §Yis active§!"
- POL_great_depression_active: "§G Great Depression§! is active"
- POL_this_will_kick_poland_from_nato_TT: "§Y[POL.GetName]§! §Rwill be kicked from NATO after that!§!§W§!"
- POL_zkp_p_unhappy_TT: "§RZKP-P Communists will criticize that decision§!"
- POL_zkp_p_warning_TT: "§RZKP-P Communists will warn us about consequences of the EU integration§!"
- POL_zkp_p_unstable_TT: "§RZKP-P will start to influence government§!"
- POL_zkp_p_final_warning_TT: "§RZKP-P is preparing for civil war§!"
- POL_control_everything_TT: "§GEnable decisions to fill schools and hospitals with communists to spread propaganda§!"
- POL_communism_wave_TT: "§GEnable decisions to inject§! §Rcommunism§! §Gin other countries§!"
- POL_start_visegrad_plans_TT: "§YUnlock decisions to raise communism in [CZE.GetName], [SLO.GetName] and [HUN.GetName].§!"
- POL_start_visegrad_plans_flag: "§YVisegrad Plans Are In Progress§!"
- POL_start_baltic_plans_TT: "§YUnlock decisions to raise communism in [LIT.GetName], [LAT.GetName] and [EST.GetName].§!"
- POL_start_baltic_plans_flag: "§YBaltic Plans Are In Progress§!"
- POL_visegrad_plans_failed_flag_TT: "§RBlock every Visegrad Plan decision forever§!"
- POL_cooldown_80_days_TT: "§RCooldown:§! §Y80 days§!"
- POL_cooldown_40_days_TT: "§RCooldown:§! §Y40 days§!"
- POL_cooldown_30_days_TT: "§RCooldown:§! §Y30 days§!"
- POL_cooldown_20_days_TT: "§RCooldown:§! §Y20 days§!"
+ POL_check_cd_support_equals_one_TT: "§YНачало революции§! активен"
+ POL_check_cd_support_equals_two_TT: "§YАрмейская поддержка§! активен"
+ POL_check_cd_support_equals_three_TT: "§YСвергните правительство§! активен"
+ POL_check_cd_support_equals_four_TT: "§YОднопартийное государство§! активен"
+ POL_leave_nato_warning_TT: "§RПРЕДУПРЕЖДЕНИЕ!\nЕсли ЗКП свергнет правительство, Польшу выгонят из НАТО!§!"
+ POL_increase_es_and_ss_auto_TT: "\n§YЭта опция уменьшится§! §GПовышение статуса экономики§! §Yтайм-аут принятия решения §! §R45§! §Yдни§!\n§YЭта опция уменьшится§! §CSУсиление силы солидарности§! §Yтайм-аут принятия решения §! §R30§! §Yдни§!\n"
+ POL_prepare_the_coup_fail: "§RПереворот не удался§!"
+ POL_crush_new_solidarity1: "Политики заставили замолчать"
+ POL_crush_new_solidarity2: "Комендантский час активирован"
+ POL_crush_new_solidarity3: "Был принят новый закон"
+ POL_crush_new_solidarity4: "Границы закрыты"
+ POL_prepare_the_coup_activation: "Подготовка к перевороту"
+ POL_new_solidarity_revolution_crushed: "Новая революция Солидарности подавлена"
+ POL_prepare_the_coup_activation2: "§RВоенное убийство удалось§!"
+ POL_communism_uprising_again_activation: "§RКоммунизм снова восстает§! §Yактивен§!"
+ POL_great_depression_active: "§GВеликая депрессия§! активен"
+ POL_this_will_kick_poland_from_nato_TT: "§Y[POL.GetName]§! §R после этого выгонят из НАТО!§!§W§!"
+ POL_zkp_p_unhappy_TT: "§RКоммунисты ЗКП-П раскритиковают это решение§!"
+ POL_zkp_p_warning_TT: "§RКоммунисты ЗКП-П предупредят нас о последствиях интеграции в ЕС§!"
+ POL_zkp_p_unstable_TT: "§RЗКП-П начнет влиять на правительство§!"
+ POL_zkp_p_final_warning_TT: "§RЗКП-П готовится к гражданской войне§!"
+ POL_control_everything_TT: "§GПринять решения о заполнении школ и больниц коммунистами для распространения пропаганды.§!"
+ POL_communism_wave_TT: "§GВключить принятие решений§! §Rкоммунизм§! §GДжин в других странах§!"
+ POL_start_visegrad_plans_TT: "§YРазблокируйте решения по поднятию коммунизма в [CZE.GetName], [SLO.GetName] и [HUN.GetName].§!"
+ POL_start_visegrad_plans_flag: "§YВышеградские планы находятся в стадии реализации§!"
+ POL_start_baltic_plans_TT: "§YРазблокируйте решения по поднятию коммунизма в [LIT.GetName], [LAT.GetName] и [EST.GetName].§!"
+ POL_start_baltic_plans_flag: "§YБалтийские планы в стадии реализации§!"
+ POL_visegrad_plans_failed_flag_TT: "§RНавсегда заблокировать каждое решение Вышеградского плана§!"
+ POL_cooldown_80_days_TT: "§RПерезарядка:§! §Y80 дней§!"
+ POL_cooldown_40_days_TT: "§RПерезарядка:§! §Y40 дней§!"
+ POL_cooldown_30_days_TT: "§RПерезарядка:§! §Y30 дней§!"
+ POL_cooldown_20_days_TT: "§RПерезарядка:§! §Y20 дней§!"
  POL_visegrad_strategy_TT: "§YUnlock decision to start§! §GVisegrad Plans§! §Yin§! §RDepartment Of Foreign Influence§!"
  POL_balkan_communists_TT: "§YUnlock decision to start§! §GWest Balkan Plans§! §Yin§! §RDepartment Of Foreign Influence§!"
- POL_baltic_plans_failed_flag: "§RBaltic Plans Failed§!"
- POL_baltic_plans_failed_flag_TT: "§RBaltic Plans Failed§!"
+ POL_baltic_plans_failed_flag: "§RБалтийские планы провалились§!"
+ POL_baltic_plans_failed_flag_TT: "§RБалтийские планы провалились§!"
  POL_start_balkan_plans_flag: "§YEast Balkan Plans Are In Progress§!"
  POL_balkan_plans_failed_flag: "§REast Balkan Plans Failed§!"
  POL_balkan_plans_failed_flag_TT: "§REast Balkan Plans Failed§!"
