--- a/localisation/russian/MD_focus_SMA_l_russian.yml
+++ b/localisation/russian/MD_focus_SMA_l_russian.yml
@@ -428,12 +428,12 @@
  SMA_change_ed_work: "Обучение работников"
  SMA_change_ed_res: "Обучение ученых"
  SMA_change_ed_mil: "Обучение армии"
- balance_tourism_TT: "§YAdditional Income§! from Tourism: §G0.2§! Billions."
- balance_tourism_ii_TT: "§YAdditional Income§! from Tourism: §G0.15§! Billions."
- balance_tourism_i_TT: "§YAdditional Income§! from Tourism: §G0.1§! Billions."
- balance_balance_TT: "§YAdditional Income§! from Corporations And Tourism: §G0.08§! Billions."
- balance_economy_i_TT: "§YAdditional Income§! from Corporations: §G0.1§! Billions."
- balance_economy_ii_TT: "§YAdditional Income§! from Corporations: §G0.15§! Billions."
- balance_economy_TT: "§YAdditional Income§! from Corporations: §G0.2§! Billions."
- start_build_center_TT: "Makes §YDecisions§! of building a §YResearch Center§! available."
- change_textbooks_TT: "Makes decisions on §YTextbook Changes§! available."
+ balance_tourism_TT: "§YДополнительный доход§! из Туризма: §G0.2§! Миллиарды."
+ balance_tourism_ii_TT: "§YДополнительный доход§! из Туризма: §G0.15§! Миллиарды."
+ balance_tourism_i_TT: "§YДополнительный доход§! из Туризма: §G0.1§! Миллиарды."
+ balance_balance_TT: "§YДополнительный доход§! от корпораций и туризма: §G0.08§! Миллиарды."
+ balance_economy_i_TT: "§YДополнительный доход§! от корпораций: §G0.1§! Миллиарды."
+ balance_economy_ii_TT: "§YДополнительный доход§! от корпораций: §G0.15§! Миллиарды."
+ balance_economy_TT: "§YДополнительный доход§! от корпораций: §G0.2§! Миллиарды."
+ start_build_center_TT: "Принимает §Yрешения§! строительства §YИсследовательского центра§! доступный."
+ change_textbooks_TT: "Принимает решения по §YИзменениям в учебниках§! доступный."
