--- a/localisation/russian/MD_focus_USA_l_russian.yml
+++ b/localisation/russian/MD_focus_USA_l_russian.yml
@@ -1835,7 +1835,7 @@
  USA_is_territory_flag: "является территорией §YСоединенных Штатов§!"
  USA_has_wall_street_faction_TT: "Имеет внутреннюю фракцию §YWall Street§!"
  USA_not_expanding_other_resources_TT: "Не может расширять другие ресурсы"
- USA_not_expanded_states_resources_three_times_TT: "Has Not Expanded the State's §YResources§! §G3§! §YTimes§!"
+ USA_not_expanded_states_resources_three_times_TT: "Не расширил ресурсы §Yгосударства§! в §G3§! §Yраза§!"
  USA_deregulate_wall_street_decision_tt: "§YСила Уолл-стрит§! баольше §Y5§!\n§YСила регулирования§! больше §Y10§!\n"
  USA_regulate_wall_street_decision_tt: "§YСила Уолл-стрит§! меньше §Y45§!\n§YСила регулирования§! меньше §Y90§!\n"
  USA_allowed_microsoft_merger: "Разрешено слияние §YMicrosoft§!"
@@ -2520,7 +2520,7 @@
  USA_artsy_arboreal_vibes_desc: "Погрузитесь в художественное самовыражение, вдохновленное этим событием, где творчество сходится с американским изобразительным искусством."
  USA_fiesta_foliage: "Fiesta Foliage"
  USA_fiesta_foliage_desc: "Explore the starring role of the celebration in festive traditions, where twinkling lights and holiday spirit converge in a celebration of community."
- USA_community_canopy_connection: "Community Canopy Connection"
+ USA_community_canopy_connection: "Соединение навеса сообщества"
  USA_community_canopy_connection_desc: "Приподнимите завесу над ролью праздника как общественного центра, объединяющего людей для совместных моментов и торжеств."
  USA_chronicles_of_celebration: "Хроники торжества"
  USA_chronicles_of_celebration_desc: "Путешествуйте во времени по историческим событиям, связанным с празднованием, и раскрывайте истории, которые формировали его повествование на протяжении многих лет."
@@ -2528,17 +2528,17 @@
  USA_civic_celebration_station_desc: "Узнайте, как праздник вызывает гражданскую гордость и участие, превращая обычные собрания в необычайные общественные мероприятия."
  USA_feast_treats: "Праздничные угощения"
  USA_feast_treats_desc: "Насладитесь вкусом кулинарных традиций, связанных с этим праздником, где рецепты и праздники сливаются в аппетитный праздник."
- USA_edu_tainment_extravaganza: "Edu-Tainment Extravaganza"
- USA_edu_tainment_extravaganza_desc: "Step into the educational spotlight with programs that make learning about the celebration a joyous and enlightening experience."
+ USA_edu_tainment_extravaganza: "Образовательно-развлекательная феерия"
+ USA_edu_tainment_extravaganza_desc: "Будьте в центре внимания образования с помощью программ, которые сделают изучение праздника радостным и поучительным опытом."
  USA_conservation_couture: "Сохранение Кутюр"
  USA_conservation_couture_desc: "Продемонстрируйте модную сторону мероприятия, подчеркнув усилия по сохранению его экологичности и процветания для будущих поколений."
  USA_family_fiesta_chronicles: "Хроники семейной фиесты"
  USA_family_fiesta_chronicles_desc: "Собирайтесь вместе, чтобы услышать трогательные семейные истории, рассказанные во время праздника, где воспоминания расцветают, как радостные моменты, которые вы пережили."
- USA_literary_limelight: "Literary Limelight"
- USA_literary_limelight_desc: "Leaf through the pages of literary works that pay homage to the celebration, turning it into a muse for poets and storytellers."
- USA_artistic_arbor_adventures: "Artistic Arbor Adventures"
- USA_artistic_arbor_adventures_desc: "Immerse yourself in a world of public art installations inspired by the celebration, where creativity knows no bounds."
- USA_tech_touched_treetime: "Tech-Touched Treetime"
+ USA_literary_limelight: "Литературный центр внимания"
+ USA_literary_limelight_desc: "Листайте страницы литературных произведений, отдающих дань уважения этому празднику, превращая его в музу поэтов и сказителей."
+ USA_artistic_arbor_adventures: "Художественные приключения в беседке"
+ USA_artistic_arbor_adventures_desc: "Погрузитесь в мир паблик-арт-инсталляций, вдохновленных этим праздником, где творчество не знает границ."
+ USA_tech_touched_treetime: "Древесное время, тронутое технологиями"
  USA_tech_touched_treetime_desc: "Experience the celebration like never before with tech-infused wonders, from virtual adventures to augmented reality magic."
  USA_global_grove_connection: "Global Grove Connection"
  USA_global_grove_connection_desc: "Uncover how the charm of the celebration extends beyond borders, putting American culture in the global spotlight."
