--- a/localisation/russian/MD_ideas_l_russian.yml
+++ b/localisation/russian/MD_ideas_l_russian.yml
@@ -928,3 +928,5 @@
  SHA_libyan_education_desc: "Ливия является ярым сторонником независимости Сахары с 1980-х годов. Одним из ключевых способов поддержки Ливией Фронта ПОЛИСАРИО является предоставление образования многим молодым сахарцам. Это дает нашим людям доступ к образованию, в котором марокканцы отказывают нам."
  idea_overlord_subsidies: "Субсидии Оверлорда"
  idea_overlord_subsidies_desc: "Субсидии, которые наш повелитель предоставляет нам для нашей экономической выгоды, заставляют нас медленно терять нашу автономию, поскольку мы постепенно становимся все более зависимыми от них в нашей экономике."
+ SUD_humiliated_army: "Униженная армия"
+ SUD_humiliated_army_desc: "Недавний рейд дарфурских повстанцев на Эль-Фашир нанес серьезный военный и психологический удар суданской армии. Гораздо меньшей группе повстанцев удалось уничтожить несколько самолетов, убить нескольких солдат и захватить генерал-майора, который был командиром авиабазы. Пройдет время, прежде чем армия сможет оправиться от этого."
