--- a/localisation/russian/MD_middle_east_content_l_russian.yml
+++ b/localisation/russian/MD_middle_east_content_l_russian.yml
@@ -739,11 +739,11 @@
  gcc.21.t: "[FROM.GetName] присоединяется к ССАГПЗ"
  gcc.21.d: "После длительного процесса вступления [FROM.GetName] удалось добиться членства в Совете сотрудничества арабских государств Персидского залива, региональной организации, основанной [SAU.GetNameDef], [BHR.GetNameDef], [KUW.GetNameDef], [OMA.GetNameDef], [QAT.GetNameDef] и [UAE.GetNameDef]. Это событие представляет собой значительное расширение ССАГПЗ, который долгое время настороженно относился к принятию в свои ряды новых членов. Теперь [FROM.GetName] смогут воспользоваться целым рядом экономических, политических и военных преимуществ, которые дает членство в ССАГПЗ."
  gcc.21.a: "ССАГПЗ становится сильнее..."
- gcc.22.t: "[FROM.GetAdjective] представители требуют продажи оружия для ССАГПЗ"
+ gcc.22.t: "Группа [FROM.GetAdjective] требует продать оружие GCC"
  gcc.22.d: "Совет сотрудничества арабских государств Персидского залива исторически поддерживает [ROOT.GetAdjective] правительство и поэтому является важным [ROOT.GetAdjective] союзником в арабском мире. [FROM.GetAdjective] представители утверждали, что предоставление оружия для ССАГПЗ поможет им защититься от наших общих врагов, обеспечив членов ССАГПЗ столь необходимым оружием и повысив оперативную совместимость их сил."
  gcc.22.a: "Давайте отдадим им оружие."
  gcc.22.b: "Они нужны нам самим."
- gcc.23.t: "[FROM.GetName] завершает продажу оружия блоку государств Персидского залива"
+ gcc.23.t: "[FROM.GetNameDef] завершает продажу оружия группе стран Персидского залива"
  gcc.23.d: "В ответ на просьбу государств-членов Совета сотрудничества арабских государств Персидского залива [FROM.GetAdjective] представители одобрили продажу вооружений для всей организации. Этот шаг был воспринят как сигнал растущего единства ССАГПЗ, поскольку в прошлом различные вооруженные силы ССАГПЗ были неинтегрированными и нескоординированными, и это явление усугублялось тем, что они закупали оружие у разных поставщиков. [FROM.GetLeader] выразил надежду, что эта продажа поможет ССАГПЗ более эффективно бороться с общими угрозами на Ближнем Востоке. Арабские государства Персидского залива, входящие в состав ССАГПЗ, со своей стороны, выразили радость по поводу успеха этой сделки."
  gcc.24.t: "[FROM.GetName] давит на нас, чтобы мы поддержали нового члена ССАГПЗ"
  gcc.24.d: "[pressured_to_accept] в настоящее время добивается членства в Совете сотрудничества арабских государств Персидского залива, и получает поддержку в этом начинании со стороны [FROM.GetNameDef]. Мы должны подумать, стоит ли поддерживать усилия [pressured_to_accept]."
