--- a/localisation/russian/MD_techs_l_russian.yml
+++ b/localisation/russian/MD_techs_l_russian.yml
@@ -4189,23 +4189,23 @@
  CAT_ai: "Технология искусственного интеллекта"
  CAT_nfibers: "Технология нановолокон"
  CAT_naval_reactors: "Военно-морские ядерные реакторы"
- CAT_renewable: "Renewable Energy Technology"
- command_initative_tooltip: "§RYOU MAY ONLY SELECT ONE OF THE THREE TECHS§!"
- military_combat_focus_tt: "§RNATIONS MAY SELECT UP TO TWO MAIN DOCTRINE PATHS. SUPERPOWERS MAY SELECT UP TO THREE.§!"
- modifier_experience_gain_armor_Bat_combat_factor: "Tank Battalion Combat Experience Gain"
- modifier_experience_gain_L_Inf_Bat_combat_factor: "Light Infantry Combat Experience Gain"
- modifier_experience_gain_Mot_Inf_Bat_combat_factor: "Motorized Infantry Combat Experience Gain"
- modifier_experience_gain_Mech_Inf_Bat_combat_factor: "Mechanized Infantry Combat Experience Gain"
- modifier_experience_gain_Arm_Inf_Bat_combat_factor: "Armored Infantry Combat Experience Gain"
- modifier_experience_gain_L_arm_Bat_combat_factor: "Light Tank Combat Experience Gain"
- category_conventional_infantry: "Conventional Infantry"
- Military_Technology_Doctrine: "Military Technology Doctrine"
- Military_Technology_Doctrine_desc: "As warfare advances into the 21st Century, the rapid advances in technology provide avenues for military exploitation. Both off the shelf components, and cutting edge technological wonders, allow a military force to significantly enhance it's fighting capabilities."
- high_tech_doctrine: "High Technology Military"
- high_tech_doctrine_desc: "By concentrating our technological efforts on the cutting edge, we will advance past what other nations can deploy, and will have a significant advantage in the battlespace, both on the battlefield and in cyberwarface. \n\n§RThis doctrine will cost 100bn on unlock§!"
- digital_assisted_warfare: "Digitally Assisted Warfare"
- digital_assisted_warfare_desc: "Using modern computer systems, satellite communications, and data-sharing technology, our forces will be able to plan, communicate, and execute plans faster than our opponents. \n\n§RThis doctrine will cost 200bn on unlock§!"
- cross_com_deployment: "CROSS-COM Systems"
+ CAT_renewable: "Технология возобновляемых источников энергии"
+ command_initative_tooltip: "§RВЫ МОЖЕТЕ ВЫБРАТЬ ТОЛЬКО ОДНУ ИЗ ТРЕХ ТЕХНИК§!"
+ military_combat_focus_tt: "§RНАЦИОНЫ МОГУТ ВЫБРАТЬ ДО ДВА ОСНОВНЫХ ДОКТРИННЫХ ПУТЕЙ. СУПЕРСИЛЫ МОГУТ ВЫБРАТЬ ДО ТРИХ.§!"
+ modifier_experience_gain_armor_Bat_combat_factor: "Прирост боевого опыта танкового батальона"
+ modifier_experience_gain_L_Inf_Bat_combat_factor: "Прирост боевого опыта легкой пехоты"
+ modifier_experience_gain_Mot_Inf_Bat_combat_factor: "Прирост боевого опыта моторизованной пехоты"
+ modifier_experience_gain_Mech_Inf_Bat_combat_factor: "Прирост боевого опыта механизированной пехоты"
+ modifier_experience_gain_Arm_Inf_Bat_combat_factor: "Прирост боевого опыта бронетанковой пехоты"
+ modifier_experience_gain_L_arm_Bat_combat_factor: "Прирост боевого опыта легких танков"
+ category_conventional_infantry: "Обычная пехота"
+ Military_Technology_Doctrine: "Военно-технологическая доктрина"
+ Military_Technology_Doctrine_desc: "По мере продвижения войны в 21 век быстрый прогресс технологий открывает возможности для военной эксплуатации. Как готовые компоненты, так и новейшие технологические чудеса позволяют вооруженным силам значительно повысить свои боевые возможности."
+ high_tech_doctrine: "Высокие технологии Военные"
+ high_tech_doctrine_desc: "Концентрируя наши технологические усилия на переднем крае, мы преодолеем то, что могут использовать другие страны, и получим значительное преимущество на поле боя, как на поле боя, так и в кибервойне.\n\n§RРазблокировка этой доктрины будет стоить 100 миллиардов долларов.§!"
+ digital_assisted_warfare: "Война с цифровой поддержкой"
+ digital_assisted_warfare_desc: "Используя современные компьютерные системы, спутниковую связь и технологии обмена данными, наши силы смогут планировать, общаться и выполнять планы быстрее, чем наши противники.\n\n§RРазблокировка этой доктрины обойдется в 200 миллиардов долларов.§!"
+ cross_com_deployment: "КРОСС-КОМ Системы"
  cross_com_deployment_desc: "With each soldier getting a data-linked HUD, linked to an eyepiece on their helmet, even our foot soldiers will have a complete understanding of their local battlespace. \n\n§RThis doctrine will cost 200bn on unlock§!"
  advanced_unit_drones: "Advanced Drone Systems"
  advanced_unit_drones_desc: "Drone systems, with semi-autonomous decision making, will be able to augment squad level awareness, combat capability, and enemy detection.\n\n§RThis doctrine will cost 300bn on unlock§!"
