--- a/localisation/russian/victory_points_l_russian.yml
+++ b/localisation/russian/victory_points_l_russian.yml
@@ -4706,6 +4706,8 @@
  VICTORY_POINTS_15026: "Aleneva"
  VICTORY_POINTS_15057: "Cantwell"
  VICTORY_POINTS_15043: "Tatitlek"
- VICTORY_POINTS_15044: "Cordova"
- VICTORY_POINTS_15041: "Katalla"
- VICTORY_POINTS_15059: "Lake Minchumina"
+ VICTORY_POINTS_15044: "Кордова"
+ VICTORY_POINTS_15041: "Каталла"
+ VICTORY_POINTS_15059: "Озеро Минчумина"
+ VICTORY_POINTS_11075: "зубец"
+ VICTORY_POINTS_11069: "Голо"
