--- a/localisation/simp_chinese/MD_countries_cosmetic_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_countries_cosmetic_l_simp_chinese.yml
@@ -3599,3 +3599,30 @@
  PER_REB: "伊朗革命委员会"
  PER_REB_DEF: "伊朗革命委员会"
  PER_REB_ADJ: "伊朗"
+ SSU_SPLA: "苏丹人民解放军"
+ SSU_SPLA_DEF: "苏丹人民解放军"
+ SSU_SPLA_ADJ: "苏丹叛军"
+ SSU_AZANIA: "阿扎尼亚"
+ SSU_AZANIA_DEF: "阿扎尼亚"
+ SSU_AZANIA_ADJ: "阿扎尼亚"
+ SSU_NILE: "尼罗河共和国"
+ SSU_NILE_DEF: "尼罗河共和国"
+ SSU_NILE_ADJ: "尼罗河"
+ SSU_KUSH: "库什共和国"
+ SSU_KUSH_DEF: "库什共和国"
+ SSU_KUSH_ADJ: "库什"
+ NEW_SUDAN: "新苏丹"
+ NEW_SUDAN_DEF: "新苏丹"
+ NEW_SUDAN_ADJ: "苏丹"
+ DAR_DLF: "达尔富尔解放阵线"
+ DAR_DLF_DEF: "达尔富尔解放阵线"
+ DAR_DLF_ADJ: "达尔富尔"
+ SUD_SPLMN: "苏丹人民解放运动-北方"
+ SUD_SPLMN_DEF: "苏丹人民解放运动-北方"
+ SUD_SPLMN_ADJ: "苏丹叛军"
+ SUD_SRF: "苏丹革命阵线"
+ SUD_SRF_DEF: "苏丹革命阵线"
+ SUD_SRF_ADJ: "苏丹叛军"
+ SSU_SUD_autonomy_autonomous_state: "南苏丹自治区"
+ SSU_SUD_autonomy_autonomous_state_DEF: "南苏丹自治区"
+ SSU_SUD_autonomy_autonomous_state_ADJ: "南苏丹"
