--- a/localisation/simp_chinese/MD_focus_BOS_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BOS_l_simp_chinese.yml
@@ -101,7 +101,7 @@
  BOS_the_repair_of_srpska_and_herzegovina: "修复塞族共和国和黑塞哥维那"
  BOS_national_unrest: "政局动荡"
  BOS_National_awakening: "国家觉醒"
- BOS_state_opposition: "地区反对"
+ BOS_state_opposition: "国家反对派"
  BOS_Relax_conscription_laws: "放宽征兵法案"
  BOS_Cooperation_alignment: "合作结盟"
  BOS_Bosnian_Trade_alliance: "波斯尼亚武器贸易联盟"
@@ -304,7 +304,7 @@
  bos_expand_islamic_unity: "<尚未实装的文本>"
  bos_commence_centralization: "<尚未实装的文本>"
  bos_declare_a_islamic_take_over: "穆扎希德起义"
- bos_declare_a_islamic_take_over_desc: "我们的外籍士兵对我们目前在内战中的行动感到不满，并计划对政府进行一场持续的政变！"
+ bos_declare_a_islamic_take_over_desc: "我们部署的外国战士对我们目前在内战中的行动感到不满，并正在策划一场针对政府的政变！"
  bos_core_states_2: "伊斯兰改信与整合[From.GetName]"
  Boost_yugo_nost_serbia: "在下巴尔干岛地区强化南斯拉夫情结"
  Boost_yugo_nost_croatia: "扩大克罗地亚的尤戈诺斯塔利亚"
@@ -387,7 +387,6 @@
  bos_save_by_peacekeepersEUFOR: "在§R内战§!时§Y欧洲联盟军§!将会§Y制定§!"
  Bos_overtime_For_leader: "领导加班"
  Bosnian_cooperator: "波斯尼亚合作者"
- Bosnian_polical_reformer: "政治改革家"
  BOS_Roatation_of_leaders1: "轮换到期"
  BOS_Roatation_of_leaders: "进行总统轮换"
  BOS_upset_with_term_length: "人民在政府中的代表权诉求"
@@ -426,7 +425,7 @@
  bos_this_can_be_rejected: "§R遭到接受国拒绝§!"
  Bosnia_united_nations_aid: "来自国际合作伙伴的援助"
  bos_international_funding: "来自国际合作伙伴的援助"
- bos_international_funding_desc: "波斯尼亚战争后，制定了各种方案向波斯尼亚和黑塞哥维那提供财政援助。这些计划由各种国际组织制定，包括世界银行、欧盟（EU）、联合国开发计划署（UNDP）和美国国际开发署（USAID）等。\n\n这些方案的总体目标是支持波斯尼亚的重建和发展努力，其中包括重建基础设施、改善治理和公共服务、促进经济发展和促进社会包容。这些计划资助的具体举措各不相同，但它们通常侧重于教育、医疗保健、住房、创造就业机会和加强民主制度等领域。\n\n这一期间资助的具体倡议的一些例子包括世界银行的波斯尼亚和黑塞哥维那国家援助战略，该战略为基础设施项目、体制发展和社会服务提供资金;欧盟的CARDS计划，支持经济改革和与欧盟的融合;美国国际开发署的项目侧重于促进经济增长、加强公民社会和改善治理。\n\n总体而言，这些计划在波斯尼亚和黑塞哥维那的重大重建和过渡期间提供了重要的财政和技术支持，帮助该国稳定并为未来的增长和发展奠定基础。§W\n---------------\n§!如果没有§Y联合保护稳定部队§!将§R取消§!"
+ bos_international_funding_desc: "波斯尼亚战争后，各种项目被设立，为波斯尼亚和黑塞哥维那提供经济援助。这些项目由各种国际组织设立，包括世界银行、欧盟 (EU)、联合国开发计划署 (UNDP) 和美国国际开发署 (USAID) 等。\n\n这些项目的总体目标是支持波斯尼亚的重建和发展努力，包括重建基础设施、改善治理和公共服务、促进经济发展和促进社会包容。这些项目资助的具体举措各不相同，但通常侧重于教育、医疗保健、住房、创造就业机会和加强民主机构等领域。\n\n这一时期资助的具体举措包括世界银行的波斯尼亚和黑塞哥维那国家援助战略，为基础设施项目、机构发展和社会服务提供资金；欧盟的CARDS计划，支持经济改革和与欧盟的一体化；以及美国国际开发署的计划，重点是促进经济增长、加强民间社会和改善治理。\n\n总体而言，这些项目在波斯尼亚和黑塞哥维那重建和转型时期提供了重要的财政和技术支持，帮助该国实现稳定并为未来的增长和发展奠定了基础。\n§W---------------§!\n如果没有§Y联合保护稳定部队§!国家精神则该国家精神将被§R移除§!"
  BOS_croats_declares_indpend_hidden: "新国家的成员国资格"
  BOS_unlocks_prep_for_srpska_war: "£decision_icon_small §Y解锁§!波斯尼亚塞族内战的备工作§Y决议§!"
  BOS_unlocks_EUFOR: "£decision_icon_small §Y解锁§!建立欧洲联盟军§Y决议§!\n移除§t联合保护稳定部队§!后"
@@ -493,9 +492,8 @@
  bos_croat_stability_will_rise_tt: ""
  bos_srpska_stability_will_rise_tt: ""
  bos_bosniak_stability_will_rise_tt: ""
- if_a_strike_happens_this_may_lead_to_a_shift_in_goverment_tt: "如果发生罢工，这可能导致政府改变"
  with_out_the_required_euipment_and_support_are_mining_industy_will_collapse_tt: "§R没有所需的支持，采矿业将崩溃§!"
- bos_this_foucs_will_give_more_rewards_if_you_do_both_of_the_requirements: "如果你满足先决条件，这个国策会给予不同的效果§"
+ bos_this_foucs_will_give_more_rewards_if_you_do_both_of_the_requirements: "§R如果你满足先决条件，这个国策会给予不同的效果§!"
  with_out_the_required_euipment_and_support_are_farming_industy_will_collapse_tt: "§R没有所需的支持，农业将崩溃§!"
  bos_investment: "这些国家将更愿意投资我们。"
  BOS_more_likely_to_send_support: "更有可能在发生冲突时提供援助"
@@ -552,13 +550,13 @@
  BOS_APC_armament: "装甲运输车部队"
  BOS_APC_armament1: "装甲运输车部队"
  BOS_main_battle_line: "主要战线"
- BOS_boots_on_the_ground: "地面上的靴子"
- BOS_boots_on_the_ground1: "地面上的靴子"
+ BOS_boots_on_the_ground: "脚踏实地"
+ BOS_boots_on_the_ground1: "脚踏实地"
  BOS_detain_Ratko_Mladic: "拉特科·姆拉迪奇被囚禁"
  BOS_financial_crisis: "财政危机"
  BOS_financial_crisis2: "财政危机"
  BOS_financial_crisis3: "财政危机"
- BOS_boots_on_the_ground2: "地面上的靴子"
+ BOS_boots_on_the_ground2: "脚踏实地"
  BOS_civilian_training: "平民训练"
  BOS_rifle_advancements: "步枪技术的进步"
  bos_rotating_presidency2: "轮换主席制"
@@ -577,7 +575,7 @@
  bos_lumber_harvesting_idea: "伐木业收获"
  BOS_Srpska_Supremacy: "塞族共和国至高无上"
  bos_failing_mining_industy: "失败的采矿业"
- bos_unproductive_farming: "不产的农业"
+ bos_unproductive_farming: "低效农业"
  bos_bosnian_lead_army: "共同努力"
  BOS_post_war_clean_up: "战后的清理工作"
  BOS_ruined_nation: "废墟国家"
@@ -622,14 +620,14 @@
  Bosnia.11.a: "两国间更为深厚的友谊将会增长"
  Bosnia.12.t: "农民罢工"
  Bosnia.12.d: "国内许多人因为餐盘上的食物短缺而挨饿。许多人在反对政府的抗议中走上街头。他们希望政府采取行动来支持国家的支柱。许多人呼吁政府更迭。我们愿意服从这些要求吗？"
- Bosnia.12.a: "需要转变"
+ Bosnia.12.a: "政府需要转变"
  Bosnia.12.b: "达成交易"
  Bosnia.13.t: "达成协议"
  Bosnia.13.d: "许多人呼吁和平，并停止抗议活动。今天，政府签署了一份支持他们的协议。现在，以后，将来。"
  Bosnia.13.a: "我们不得不接受的交易。"
- Bosnia.14.t: "矿工罢工 "
+ Bosnia.14.t: "矿工罢工"
  Bosnia.14.d: "矿业内部的许多人要求提高薪酬，更好的工作时间和保护他们不受恶劣环境的影响。一位工人说，“我宁愿留在巴西。”这群集会一直在进行，且不会停止。我们将服从这些要求吗？"
- Bosnia.14.a: "需要转变"
+ Bosnia.14.a: "政府需要转变"
  Bosnia.14.b: "达成交易"
  Bosnia.9.t: "[From.Owner.GetName]请求土耳其援助"
  Bosnia.9.d: "波斯尼亚再次陷入混乱，向我们请求帮助。他们要求我们向当地的波斯尼亚军队提供武器。这可能是为了重新夺回在巴尔干站稳脚跟，也可能不值得我们这么做。"
@@ -644,7 +642,7 @@
  Bosnia.34.a: "拒绝"
  Bosnia.35.t: "俄罗斯已经同意让我们加入集安组织"
  Bosnia.35.d: "我们与其他后苏维埃国家现在已经进入防御条约状态。如果一个国家遭到攻击，我们将被召唤参战。"
- Bosnia.35.a: "好消息。"
+ Bosnia.35.a: "好消息"
  Bosnia.36.t: "俄罗斯已拒绝让我们成为集安组织成员"
  Bosnia.36.d: "俄罗斯拒绝成为缔约国是因为我们加入会带来集安组织太多风险"
  Bosnia.36.a: "坏消息。"
@@ -723,7 +721,7 @@
  Bosnia_bosnia_random: ""
  Bosnia_serb_random: ""
  Bosnia_croat_random: ""
- decision_cost_civ_factory_1: "decision_cost_civ_factory_1"
+ decision_cost_civ_factory_1: "民用工厂成本"
  armor: "装甲"
  event_chain_will_fire: ""
  BOS_refection_of_are_doctrine: ""
@@ -844,3 +842,5 @@
  Boost_yugo_nost_Bosnia: "增强波斯尼亚的南斯拉夫情结"
  plus_four_yugo_nost_bosnia: "在 @BOS [BOS.GetName] 增加§Y+4§!南斯拉夫情结"
  Bosnia_focus: "波斯尼亚国策树"
+ Bosnian_political_reformer: "政治改革家"
+ if_a_strike_happens_this_may_lead_to_a_shift_in_government_tt: "如果发生罢工，可能会导致政府更迭"
