--- a/localisation/simp_chinese/MD_focus_GEO_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GEO_l_simp_chinese.yml
@@ -92,7 +92,7 @@
  GEO_deal_with_turkey_adjara: "在阿扎尔与土耳其打交道"
  GEO_deal_with_turkey_adjara_desc: "是时候与土耳其就阿扎尔问题的合作签署相关协议了。相互合作将是改善关系的良好借口。"
  GEO_close_monadire: "关闭莫达里尔"
- GEO_close_monadire_desc: "莫达里尔应该被禁止，克维恰尼应该被监禁。没有别的机会了！"
+ GEO_close_monadire_desc: "莫达里尔应该被禁止，克维恰尼应该被监禁。别无选择！"
  GEO_clear_dissidents_monadire: "清除莫达里尔持不同政见者"
  GEO_clear_dissidents_monadire_desc: "清除它们是唯一可行的选择！"
  GEO_allow_kviciani: "允许克维恰尼"
@@ -288,9 +288,9 @@
  georg_military.1.t: "军事改革"
  georg_military.1.d: "格鲁吉亚成功地改革了他们的军队；大量新兵报名保卫这个光荣的国家。"
  georg_military.1.a: "你对结果感到满意。"
- georg.1243.t: "格鲁吉亚要求俄罗斯从其国家撤出所有军队。"
- georg.1243.d: "鉴于最近发生的事件，格鲁吉亚已向俄罗斯发出通知，要求他们撤出格鲁吉亚境内的所有部队和并除役所有基地。"
- georg.1243.a: "你正式撤回俄罗斯对格鲁吉亚的军事通行权。"
+ georg.1243.t: "格鲁吉亚要求俄罗斯撤军"
+ georg.1243.d: "鉴于最近发生的事件，格鲁吉亚政府已向我国政府发出通知，要求我国所有军事人员正式撤出该国。要求还包括关闭我国军队（俄罗斯武装部队）拥有和运营的所有军事基地。我国部队已撤离其驻地，并正在越过格鲁吉亚边境返回。"
+ georg.1243.a: "不幸的遭遇"
  georg.1244.t: "夺取我们领土上的旧苏联空军基地及其资产。"
  georg.1244.d: "今天，格鲁吉亚武装部队袭击并收复了旧的苏联空军基地，拿走了所有剩余资产。"
  georg.1244.a: "带走他们！"
