--- a/localisation/simp_chinese/MD_middle_east_content_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_middle_east_content_l_simp_chinese.yml
@@ -739,11 +739,11 @@
  gcc.21.d: "经过漫长的加入过程，[FROM.GetNameDef]设法获得海湾合作委员会的成员资格，这是一个由[SAU.GetNameDef]、[BHR.GetNameDef]、[KUW.GetNameDef]、[OMA.GetNameDef]、[QAT.GetNameDef]和[UAE.GetNameDef]创立的区域组织。这一事态发展代表着海湾合作委员会的重大扩张，海湾合作委员会长期以来一直对接纳新成员持谨慎态度。[FROM.GetNameDef]现在将能够利用海湾合作委员会成员资格赋予的一系列经济、政治和军事利益。"
  gcc.21.a: "海合会越来越强大……"
  gcc.22.t: "[FROM.GetAdjective]要求集团向海湾合作委员会出售武器"
- gcc.22.d: "海湾合作委员会历来与[ROOT.GetAdjective]政府结盟，因此是阿拉伯世界[ROOT.GetAdjective]的重要盟友。[FROM.GetAdjective]认为，向海湾合作委员会提供集团武器销售将帮助他们抵御我们共同的敌人，向海湾合作委员会成员提供急需的武器，并增强他们的部队互操作性。"
+ gcc.22.d: "海湾合作委员会历来与[ROOT.GetAdjective]政府结盟，因此是阿拉伯世界重要的[ROOT.GetAdjective]盟友。[FROM.GetAdjective]认为，允许集团向海湾合作委员会出售武器将帮助他们抵御我们共同的敌人，为海湾合作委员会成员国提供急需的武器，并增强其军队互操作能力。"
  gcc.22.a: "把枪给他们吧。"
  gcc.22.b: "我们自己也需要他们。"
- gcc.23.t: "[FROM.GetNameDef]敲定GCC大宗武器销售"
- gcc.23.d: "应海湾合作委员会成员国的要求，[FROM.GetAdjective]批准向整个组织出售武器。这一举动被吹捧为海湾合作委员会日益团结的讯号，因为在过去，海湾合作委员会的各种军队是不统一和不协调的，这一现象因它们从不同的供应商采购武器而加剧。[FROM.GetLeader]表示希望这笔交易将有助于海湾合作委员会更有效地打击中东地区的共同威胁。组成海湾合作委员会的阿拉伯海湾国家对这一协议的成功表示高兴。"
+ gcc.23.t: "[FROM.GetNameDef]敲定海湾合作委员会集团武器销售"
+ gcc.23.d: "应海湾合作委员会成员国的要求，[FROM.GetAdjective]批准向整个组织出售武器。这一举措被吹捧为海湾合作委员会日益团结的信号，因为过去海湾合作委员会各军队缺乏整合和协调，而他们从不同供应商处采购武器则加剧了这种现象。[FROM.GetLeader]表示希望此次出售能帮助海湾合作委员会更有效地应对中东的共同威胁。组成海湾合作委员会的阿拉伯海湾国家则对此次交易的成功表示高兴。"
  gcc.24.t: "[FROM.GetNameDef]要求我们支持新的GCC成员"
  gcc.24.d: "[pressured_to_accept]目前正在寻求加入海湾合作委员会，并得到[FROM.GetNameDef]的支持。我们应该考虑是否也支持[pressured_to_accept]的努力。"
  gcc.24.a: "这个州值得成为会员！"
