--- a/localisation/simp_chinese/victory_points_l_simp_chinese.yml
+++ b/localisation/simp_chinese/victory_points_l_simp_chinese.yml
@@ -4709,3 +4709,5 @@
  VICTORY_POINTS_15044: "科尔多瓦"
  VICTORY_POINTS_15041: "卡塔拉"
  VICTORY_POINTS_15059: "莱克明丘米纳"
+ VICTORY_POINTS_11075: "蒂内"
+ VICTORY_POINTS_11069: "戈洛"
