--- a/localisation/braz_por/MD_focus_GEO_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_GEO_l_braz_por.yml
@@ -93,7 +93,7 @@
  GEO_deal_with_turkey_adjara: "Negociar com a Turquia sobre Adjara"
  GEO_deal_with_turkey_adjara_desc: "É hora de assinar acordos relevantes com a Turquia sobre a cooperação no tópico de Adjara. A cooperação mútua será um bom pretexto para melhorar as relações."
  GEO_close_monadire: "Fechar o Monadire"
- GEO_close_monadire_desc: "Monadire deve ser proibido e Kviciani preso. Não há outra chance!"
+ GEO_close_monadire_desc: "Monadire deveria ser banido e Kviciani preso. Não há outra escolha!"
  GEO_clear_dissidents_monadire: "Limpar os dissidentes do Monadire"
  GEO_clear_dissidents_monadire_desc: "Purgá-los é a única opção viável!"
  GEO_allow_kviciani: "Permitir Kviciani"
@@ -289,9 +289,9 @@
  georg_military.1.t: "Reforma das Forças Armadas da Geórgia"
  georg_military.1.d: "A Geórgia reformou com sucesso suas Forças Armadas; houve um influxo de recrutas se alistando para defender o glorioso país."
  georg_military.1.a: "Você está satisfeito com o resultado."
- georg.1243.t: "A Geórgia exige a retirada de todas as tropas russas de seu país."
- georg.1243.d: "À luz dos eventos recentes, a Geórgia enviou um aviso à Rússia, exigindo que eles retirem e descomissionem TODAS as tropas e bases dentro do território da Geórgia."
- georg.1243.a: "Você revoga oficialmente o acesso militar da Rússia à Geórgia."
+ georg.1243.t: "Geórgia exige retirada das forças russas"
+ georg.1243.d: "À luz dos acontecimentos recentes, o governo georgiano enviou um aviso ao nosso governo exigindo a retirada formal de todo o nosso pessoal militar do país. As exigências também incluem o desmantelamento de todas as bases militares pertencentes e operadas pelos nossos militares, as Forças Armadas Russas. As nossas forças foram retiradas dos seus postos e estão a ser enviadas de volta através da nossa fronteira com a Geórgia."
+ georg.1243.a: "Uma circunstância infeliz"
  georg.1244.t: "Apreenda antigas bases aéreas soviéticas e seus ativos em nosso território."
  georg.1244.d: "Hoje, as Forças Armadas da Geórgia invadiram e retomaram antigas bases aéreas soviéticas, confiscando todos os ativos restantes."
  georg.1244.a: "Nós os pegaremos!"
