--- a/localisation/braz_por/MD_focus_LBA_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_LBA_l_braz_por.yml
@@ -406,8 +406,8 @@
  LBA_jewish_migration_desc: "Libya has allowed exiled Jews to return to the country, even offering some reparations in return.\n\n§YThis idea will be removed if we are at war with Israel.§!"
  LBA_champion_of_al_aqsa_idea: "Champion Of Al-Aqsa"
  LBA_champion_of_al_aqsa_idea_desc: "With control of the Al-Aqsa Mosque, Libya has become an influential beacon for all Muslims.\n\n§YThis idea will be removed if Jerusalem is not owned by, our subject or our ally.§!"
- LBA_support_mengistu: "Mengistu Media Campaign"
- LBA_support_mengistu_desc: "Libya has organised a popularity media campaign for the exiled dictator Mengistu with the goal of convincing the world of his innocence in the ongoing genocide trial."
+ LBA_support_mengistu: "Campanha de mídia Mengistu"
+ LBA_support_mengistu_desc: "A Líbia organizou uma campanha mediática de popularidade para o ditador exilado Mengistu com o objectivo de convencer o mundo da sua inocência no julgamento de genocídio em curso."
  LBA_islamic_legion_idea: "Islamic Legion"
  LBA_islamic_legion_idea_desc: "Libya has recreated the Islamic Legion, a force which is intended to act as Gaddafi's proxy in various conflicts around the glove.\n\n§YThis idea will be removed if we Libya is not ruled by a Gaddafi.§!"
  LBA_employing_charles_taylor: "Charles Taylor"
@@ -1035,8 +1035,8 @@
  LBA_close_ties_sahrawi_desc: "We have been a close supporter of the POLISARIO Front in Sahrawi since the 1980s. Many of the weapons for their Liberation Army comes from us or Algeria, and it is not uncommon for Sahrawi students to travel to Libya for their education. Our support for Sahrawi is the greatest success story against colonialism, and we need to increase our support for them."
  LBA_switch_to_morocco: "Abandon Sahrawi"
  LBA_switch_to_morocco_desc: "Supporting Sahrawi has soured our relations with Morocco. Morocco is a rising economical power and they are in opposition to Algeria, a powerful nation right next to us. It would make most sense to drop our senseless support for Sahrawi and build friendly terms with Morocco instead."
- LBA_support_algeria: "Support Algeria"
- LBA_support_algeria_desc: "Just like us, Algeria is a long-time supporter of Sahrawi. They have been a rival of Morocco for ages, so it makes sense for us to build closer ties with them."
+ LBA_support_algeria: "Apoie a Argélia"
+ LBA_support_algeria_desc: "Tal como nós, a Argélia é um apoiante de longa data do Saharaui. Eles são rivais de Marrocos há muito tempo, por isso faz sentido construirmos laços mais estreitos com eles."
  LBA_condemn_spanish_colonialism: "Condemn Spanish Colonialism"
  LBA_condemn_spanish_colonialism_desc: "Western Sahara was owned by the Spanish before they gave the area to Morocco, laying the foundation for the Western Saharan conflict. However, the Spanish have refused to return the cities of Ceuta and Melilla to Morocco, claiming that they are an integral part of Spain. This is nothing more than an excuse. Those areas are rightfully Moroccan."
  LBA_influence_mauritania: "Influence Mauritania"
@@ -1106,14 +1106,14 @@
  LBA_humanitarian_aid_to_chad_desc: "Chad has one of the lowest Human Development Indexes in the whole world. They have also never really recovered from their civil war in the 1980s, and there are still some existing rebel groups in the country. We should do a massive campaign of humanitarian aid to help the country develop."
  LBA_exploit_chadian_oil: "Exploit Chadian Oil"
  LBA_exploit_chadian_oil_desc: "O Chade descobriu recentemente as suas reservas de petróleo e há muitas mais reservas por descobrir. Infelizmente, Chad não tem recursos para fazer a perfuração sozinho. Precisamos de usar a nossa influência no país para extrair esse doce óleo do solo."
- LBA_support_darfur: "Support Darfur"
- LBA_support_darfur_desc: "Darfur has been under the rule of Sudan ever since Sudan was created as a nation. Darfur is mostly populated by non-Arab blacks, while Sudan itself is mostly Arabic. Many in Darfur feel that the Arabic goverment is making the the subject of an Arab apartheid campaign. We need to support the Darfuri in their state of oppression. In addition, an independent Darfur would make a good buffer state near our Southern border."
- LBA_support_sudan: "Support Sudan"
- LBA_support_sudan_desc: "Ever since Omar al-Bashir took power in Sudan, relations between us and Sudan have been quite good. There were even proposals to unify the two countries in the early 90s. Sudan would make a strong ally and a great pan-Arabic and pan-African partner."
+ LBA_support_darfur: "Suporte [DAR.GetName]"
+ LBA_support_darfur_desc: "Darfur está sob o domínio do Sudão desde que o Sudão foi criado como nação. Darfur é maioritariamente povoado por negros não-árabes, enquanto o próprio Sudão é maioritariamente árabe. Muitos em Darfur sentem que o governo árabe está a transformar o assunto numa campanha árabe de apartheid. Precisamos de apoiar o Darfur no seu estado de opressão. Além disso, um Darfur independente seria um bom estado-tampão perto da nossa fronteira sul."
+ LBA_support_sudan: "Suporte [SUD.GetName]"
+ LBA_support_sudan_desc: "Desde que Omar al-Bashir assumiu o poder no Sudão, as relações entre nós e o Sudão têm sido bastante boas. Houve até propostas para unificar os dois países no início dos anos 90. O Sudão seria um forte aliado e um grande parceiro pan-árabe e pan-africano."
  LBA_send_mercenaries: "Send Mercenaries"
  LBA_send_mercenaries_desc: "We need to send mercenaries to our ally to the East to stabilise their regime."
- LBA_send_mercenaries_tt_1: "If we have completed focus §Y$LBA_support_darfur$§!:\n"
- LBA_send_mercenaries_tt_2: "If we have completed focus §Y$LBA_support_sudan$§!:\n"
+ LBA_send_mercenaries_tt_1: "Se tivermos concluído o foco §Y$LBA_support_darfur$§!:\n"
+ LBA_send_mercenaries_tt_2: "Se tivermos concluído o foco §Y$LBA_support_sudan$§!:\n"
  LBA_gaddafis_dream: "Gaddafi's Dream"
  LBA_gaddafis_dream_desc: "Once he came to power, Muammar Gaddafi wanted to create the Uniter Arab States, and even did some progress with temporary unions with Tunisia and Egypt. However, after some bad blood with Arab leaders and the death of Arab nationalism, this dream seems to have crumbled. However, there are other paths Gaddafi could take..."
  LBA_approach_algeria: "Approach Algeria"
@@ -1861,15 +1861,15 @@
  LibyaTribes.1.a: "They deserve a promotion"
  LibyaTribes.1.b: "It is not our place to intervene"
  LibyaTribes.2.t: "Rising Star In The Navy"
- LibyaTribes.2.d: "A [tribal_offender] officer in our navy is showing great promise. They have quickly risen through the ranks though they now seem to have hit a wall regarding further promotions. It seems the military high brass has a personal interest in keeping this [tribal_offender] from getting any more power. We could intervene and force the military to give them another promotion. This move would also gather us some support from [tribal_offender] tribes. Alternatively, we could just silently accept the military's treatment of this young officer."
- LibyaTribes.2.a: "They deserve a promotion"
- LibyaTribes.2.b: "It is not our place to intervene"
- LibyaTribes.3.t: "Rising Star In The Air Force"
- LibyaTribes.3.d: "A [tribal_offender] officer in our air force is showing great promise. They have quickly risen through the ranks though they now seem to have hit a wall regarding further promotions. It seems the military high brass has a personal interest in keeping this [tribal_offender] from getting any more power. We could intervene and force the military to give them another promotion. This move would also gather us some support from [tribal_offender] tribes. Alternatively, we could just silently accept the military's treatment of this young officer."
- LibyaTribes.3.a: "They deserve a promotion"
- LibyaTribes.3.b: "It is not our place to intervene"
- LibyaTribes.4.t: "University Student Releases Thesis"
- LibyaTribes.4.d: "A [tribal_offender] student from a Libyan university has released a new thesis on some new technology. This thesis could help our industrial sector to advance. However, it does also reveal some critique of the ruling government and how the other tribes are holding Libya back. Should we suppress this thesis or let it be?"
+ LibyaTribes.2.d: "Um oficial [tribal_offender] em nossa marinha está se mostrando muito promissor. Eles subiram rapidamente na hierarquia, embora agora pareçam ter atingido um obstáculo em relação a novas promoções. Parece que o alto escalão militar tem um interesse pessoal em impedir que este [tribal_offender] obtenha mais poder. Poderíamos intervir e forçar os militares a conceder-lhes outra promoção. Essa mudança também nos reuniria algum apoio das tribos [tribal_offender]. Alternativamente, poderíamos simplesmente aceitar silenciosamente o tratamento dispensado pelos militares a este jovem oficial."
+ LibyaTribes.2.a: "Eles merecem uma promoção"
+ LibyaTribes.2.b: "Não é nossa função intervir"
+ LibyaTribes.3.t: "Estrela em ascensão na Força Aérea"
+ LibyaTribes.3.d: "Um oficial [tribal_offender] da nossa Força Aérea está se mostrando muito promissor. Eles subiram rapidamente na hierarquia, embora agora pareçam ter atingido um obstáculo em relação a novas promoções. Parece que o alto escalão militar tem um interesse pessoal em impedir que este [tribal_offender] obtenha mais poder. Poderíamos intervir e forçar os militares a conceder-lhes outra promoção. Essa mudança também nos reuniria algum apoio das tribos [tribal_offender]. Alternativamente, poderíamos simplesmente aceitar silenciosamente o tratamento dispensado pelos militares a este jovem oficial."
+ LibyaTribes.3.a: "Eles merecem uma promoção"
+ LibyaTribes.3.b: "Não é nossa função intervir"
+ LibyaTribes.4.t: "Estudante Universitário Lança Tese"
+ LibyaTribes.4.d: "Um estudante [tribal_offender] de uma universidade da Líbia lançou uma nova tese sobre uma nova tecnologia. Esta tese poderá ajudar o nosso setor industrial a avançar. No entanto, também revela algumas críticas ao governo no poder e à forma como as outras tribos estão a atrasar a Líbia. Devemos suprimir esta tese ou deixá-la assim?"
  LibyaTribes.4.a: "This thesis is good news"
  LibyaTribes.4.b: "Suppress the publication"
  LibyaTribes.5.t: "Economist Offers Solution"
@@ -1877,9 +1877,9 @@
  LibyaTribes.5.a: "The national economy comes first"
  LibyaTribes.5.b: "Let's try to keep the other tribes happy"
  LibyaTribes.6.t: "Local Politician Suggests Reform"
- LibyaTribes.6.d: "'When I was a little boy growing up in a [tribal_offender] village, things ran smoothly. Our elders knew how to run a community, something our government struggles doing', a local level [tribal_offender] politician stated on a TV interview recently when asked how he would improve the Libyan nation. In his interview, he made some good points how to modernise the nation. Adapting these changes would be beneficial but it would cause a slight loss of face."
- LibyaTribes.6.a: "I liked his ideas"
- LibyaTribes.6.b: "He should stick to his level"
+ LibyaTribes.6.d: "'Quando eu era um menino e crescia em uma vila [tribal_offender], as coisas corriam bem. Os nossos mais velhos sabiam como gerir uma comunidade, algo que o nosso governo tem dificuldade em fazer', afirmou recentemente um político [tribal_offender] a nível local numa entrevista televisiva quando lhe perguntaram como iria melhorar a nação líbia. Em sua entrevista, ele destacou alguns pontos positivos sobre como modernizar a nação. Adaptar essas mudanças seria benéfico, mas causaria uma ligeira perda de prestígio."
+ LibyaTribes.6.a: "gostei das ideias dele"
+ LibyaTribes.6.b: "Ele deveria manter seu nível"
  LibyaTribes.7.t: "Tribal Elders Suspected Of Treason"
  LibyaTribes.7.d: "An informant for the Revolutionary Committee from a [tribal_offender] tribe has shared information that two tribal elders have been discussing anti-revolutionary ideas with each other. Apparently, they have also been in contact with hostile powers, sharing sensitive information. We can't fully confirm all the details, but if true, these allegations are serious. Of course, it could be that this informant is simply trying to prop up the position of his own tribe."
  LibyaTribes.7.a: "Get rid of these two elders"
@@ -2265,13 +2265,16 @@
  LBA_mining_in_aouzou_tt_2: "If [CHA.GetNameWithFlag] has agreed to joint mining:\n"
  LBA_gmmr_jaghbub: "GMMR Jaghbub"
  LBA_gmmr_jaghbub_desc: "In the East of the country, right on the border with Egypt, just south of Tobruk, there is a small town of Jaghbub. The area is a natural oasis sitting on top of an aquifer. By constructing a well here, we can bring fresh water to Tobruk."
- aozou_strip_occupation_decisions: "Aouzou Strip Occupation"
- aozou_strip_occupation_decisions_desc: "With the Aouzou Strip being a contested region between us and our neighbour, the chaos they are having might enable us to take control of the region."
- generic_occupy_aouzou_strip: "Occupy The Aozou Strip"
+ aozou_strip_occupation_decisions: "Ocupação na Faixa de Aouzou"
+ aozou_strip_occupation_decisions_desc: "Sendo a Faixa de Aouzou uma região contestada entre nós e os nossos vizinhos, o caos que estão a viver poderá permitir-nos assumir o controlo da região."
+ generic_occupy_aouzou_strip: "Ocupar a faixa de Aouzou"
  generic_occupy_aouzou_strip_desc: "[580.owner.GetNameDef]'s current status makes them unable to effectively extend control over the [580.GetName]. We should send a small contingent of troops to secure the area. It is unlikely that [580.owner.GetName] will resist."
  generic_occupy_aouzou_strip_tt: "§R[580.owner.GetNameDef] might declare war on us!§!"
  LibyaFocus.104.t: "[FROM.GetNameDef] Occupies The [580.GetName]"
  LibyaFocus.104.d: "With our security forces occupied elsewhere, the deserts of the [580.GetName] are basically unpatrolled. Taking advantage of this power vacuum, [FROM.GetNameDef] has sent a small contingent of troops to set up a small base in the town of Aozou. With the [FROM.GetAdjective] flying in the center of Aouzou town, [FROM.GetNameDef] has claimed the entire area for themselves."
  LibyaFocus.104.a: "There is nothing we can do"
  LibyaFocus.104.b: "They will pay for this!"
- LBA_start_building_reactor_threat: "[LBA.GetAdjective] Nuclear Program"
+ LBA_start_building_reactor_threat: "[LBA.GetAdjective]Programa Nuclear"
+ LBA_support_south_sudan: "Suporte [SSU.GetName]"
+ LBA_support_south_sudan_desc: "Antes de Omar al-Bashir assumir o poder no Sudão, apoiámos o ELPS no sul. Al-Bashir, embora bastante amigável conosco, não é o melhor companheiro de cama. A sua reputação internacional é péssima e é apenas uma questão de tempo até que ele perca o poder. Talvez devêssemos voltar a oferecer suporte a [SSU.GetNameDef]?"
+ LBA_send_mercenaries_tt_3: "Se tivermos concluído o foco §Y$LBA_support_south_sudan$§!:\n"
