--- a/localisation/english/MD_focus_LBA_l_english.yml
+++ b/localisation/english/MD_focus_LBA_l_english.yml
@@ -453,7 +453,7 @@
  LBA_oppressor_of_women_desc: "Muammar Gaddafi's latest lecture on Islam to a group of women in Italy has led to people seeing the great leader as nothing but an oppressor of women. People are leaving Libya in droves as they do not want to live in a country ruled by such a man."
  aozou_strip_occupation_decisions: "Aouzou Strip Occupation"
  aozou_strip_occupation_decisions_desc: "With the Aouzou Strip being a contested region between us and our neighbour, the chaos they are having might enable us to take control of the region."
- generic_occupy_aouzou_strip: "Occupy The Aozou Strip"
+ generic_occupy_aouzou_strip: "Occupy The Aouzou Strip"
  generic_occupy_aouzou_strip_desc: "[580.owner.GetNameDef]'s current status makes them unable to effectively extend control over the [580.GetName]. We should send a small contingent of troops to secure the area. It is unlikely that [580.owner.GetName] will resist."
  generic_occupy_aouzou_strip_tt: "§R[580.owner.GetNameDef] might declare war on us!§!"
 
@@ -1923,7 +1923,7 @@
  LibyaTribes.3.b: "It is not our place to intervene"
  LibyaTribes.4.t: "University Student Releases Thesis"
  LibyaTribes.4.d: "A [tribal_offender] student from a Libyan university has released a new thesis on some new technology. This thesis could help our industrial sector to advance. However, it does also reveal some critique of the ruling government and how the other tribes are holding Libya back. Should we suppress this thesis or let it be?"
- LibyaTribes.4.a: "This thesis is good news"
+ LibyaTribes.4.a: "This is good news"
  LibyaTribes.4.b: "Suppress the publication"
  LibyaTribes.5.t: "Economist Offers Solution"
  LibyaTribes.5.d: "An economist from a [tribal_offender] tribe recently stated in a publication that Libya's economic productivity could be improved by cutting some taxes. By coincidence, these tax breaks would mainly impact economic sectors important to [tribal_offender] tribes. There is truth to what the economist is saying, but committing to the tax breaks would clearly make it look like we favour the [tribal_offender] tribes over the others."
