--- a/localisation/polish/MD_countries_cosmetic_l_polish.yml
+++ b/localisation/polish/MD_countries_cosmetic_l_polish.yml
@@ -3599,3 +3599,30 @@
  PER_REB: "Rada Rewolucyjna Iranu"
  PER_REB_DEF: "Rada Rewolucyjna Iranu"
  PER_REB_ADJ: "irański"
+ SSU_SPLA: "Sudan People's Liberation Army"
+ SSU_SPLA_DEF: "the Sudan People's Liberation Army"
+ SSU_SPLA_ADJ: "Sudanese rebel"
+ SSU_AZANIA: "Azania"
+ SSU_AZANIA_DEF: "Azania"
+ SSU_AZANIA_ADJ: "Azanian"
+ SSU_NILE: "Nile Republic"
+ SSU_NILE_DEF: "the Nile Republic"
+ SSU_NILE_ADJ: "Nile"
+ SSU_KUSH: "Kush Republic"
+ SSU_KUSH_DEF: "the Kush Republic"
+ SSU_KUSH_ADJ: "Kush"
+ NEW_SUDAN: "New Sudan"
+ NEW_SUDAN_DEF: "the New Sudan"
+ NEW_SUDAN_ADJ: "Sudanese"
+ DAR_DLF: "Darfur Liberation Front"
+ DAR_DLF_DEF: "the Darfur Liberation Front"
+ DAR_DLF_ADJ: "Darfuri"
+ SUD_SPLMN: "Sudan People's Liberation Movement-North"
+ SUD_SPLMN_DEF: "the Sudan People's Liberation Movement-North"
+ SUD_SPLMN_ADJ: "Sudanese rebel"
+ SUD_SRF: "Sudanese Revolutionary Front"
+ SUD_SRF_DEF: "the Sudanese Revolutionary Front"
+ SUD_SRF_ADJ: "Sudanese rebel"
+ SSU_SUD_autonomy_autonomous_state: "Southern Sudan Autonomous Region"
+ SSU_SUD_autonomy_autonomous_state_DEF: "the Southern Sudan Autonomous Region"
+ SSU_SUD_autonomy_autonomous_state_ADJ: "South Sudanese"
