--- a/localisation/russian/MD_focus_LBA_l_russian.yml
+++ b/localisation/russian/MD_focus_LBA_l_russian.yml
@@ -1106,9 +1106,9 @@
  LBA_humanitarian_aid_to_chad_desc: "В Чаде один из самых низких индексов человеческого развития во всем мире. Кроме того, он так и не оправился от гражданской войны 1980-х годов, и в стране до сих пор действуют повстанческие группировки. Мы должны провести масштабную кампанию по оказанию гуманитарной помощи, чтобы помочь стране развиваться."
  LBA_exploit_chadian_oil: "Эксплуатировать чадскую нефть"
  LBA_exploit_chadian_oil_desc: "Чад совсем недавно обнаружил свои запасы нефти, и их еще много. К сожалению, у Чада нет ресурсов, чтобы самостоятельно провести бурение. Мы должны использовать наше влияние в стране, чтобы выкапывать эту сладкую нефть из земли."
- LBA_support_darfur: "Поддержать Дарфур"
+ LBA_support_darfur: "Поддержать[DAR.GetName]"
  LBA_support_darfur_desc: "Дарфур находится под властью Судана с тех пор, как Судан был создан как государство. Дарфур населяют в основном неарабские чернокожие, в то время как в самом Судане живут в основном арабы. Многие жители Дарфура считают, что арабское правительство превращает их в объект кампании арабского апартеида. Мы должны поддержать дарфурцев в их угнетенном состоянии. Кроме того, независимый Дарфур стал бы хорошим буферным государством у нашей южной границы."
- LBA_support_sudan: "Поддержать Судан"
+ LBA_support_sudan: "Поддержать[SUD.GetName]"
  LBA_support_sudan_desc: "С тех пор как Омар аль-Башир пришел к власти в Судане, отношения между нами и Суданом были довольно хорошими. В начале 90-х годов даже были предложения об объединении двух стран. Судан был бы сильным союзником и отличным панарабским и панафриканским партнером."
  LBA_send_mercenaries: "Послать наемников"
  LBA_send_mercenaries_desc: "Мы должны послать наемников нашему союзнику на Востоке, чтобы стабилизировать его режим."
@@ -2275,3 +2275,6 @@
  LibyaFocus.104.a: "Мы ничего не можем сделать"
  LibyaFocus.104.b: "Они заплатят за это!"
  LBA_start_building_reactor_threat: "[LBA.GetAdjective] ядерная программа"
+ LBA_support_south_sudan: "Поддержать[SSU.GetName]"
+ LBA_support_south_sudan_desc: "До того, как Омар аль-Башир пришел к власти в Судане, мы поддерживали НОАС на юге. Аль-Башир хоть и дружит с нами, но не лучший партнер. Его международная репутация ужасна, и потеря им власти – лишь вопрос времени. Может быть, вместо этого нам следует вернуться к поддержке [SSU.GetNameDef]?"
+ LBA_send_mercenaries_tt_3: "Если мы завершили фокус §Y$LBA_support_south_sudan$§!:\n"
