--- a/localisation/simp_chinese/MD_focus_LBA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_LBA_l_simp_chinese.yml
@@ -1106,9 +1106,9 @@
  LBA_humanitarian_aid_to_chad_desc: "乍得是全球人类发展指数最低的国家之一。该国从未真正从1980年代的内战中恢复过来，国内仍有一些叛乱组织。我们应该开展大规模的人道主义援助活动，帮助该国发展。"
  LBA_exploit_chadian_oil: "开采乍得石油"
  LBA_exploit_chadian_oil_desc: "乍得最近刚刚发现了石油储备，还有大量的石油有待发现。不幸的是，乍得没有资源自己进行钻探。我们需要利用我们在该国的影响力，将这些富含石油的油从地下开采出来。"
- LBA_support_darfur: "支持达尔富尔"
+ LBA_support_darfur: "支持[DAR.GetName]"
  LBA_support_darfur_desc: "自从苏丹建国以来，达尔富尔一直处于苏丹的统治之下。达尔富尔的居民大多是非阿拉伯黑人，而苏丹本身则大多是阿拉伯人。达尔富尔的许多人认为阿拉伯政府正在将达尔富尔变成阿拉伯种族隔离运动的对象。我们需要支持达尔富尔人，让他们摆脱压迫。此外，独立的达尔富尔将成为我们南部边境附近的一个良好缓冲国。"
- LBA_support_sudan: "支持苏丹"
+ LBA_support_sudan: "支持[SUD.GetName]"
  LBA_support_sudan_desc: "自从奥马尔·巴希尔执掌苏丹政权以来，我们与苏丹的关系一直很好。90年代初甚至有人提议将两国统一起来。苏丹将成为我们强大的盟友和伟大的泛阿拉伯和泛非洲伙伴。"
  LBA_send_mercenaries: "派遣雇佣兵"
  LBA_send_mercenaries_desc: "我们需要派遣雇佣兵到东部去稳定他们的政权。"
@@ -2275,3 +2275,6 @@
  LibyaFocus.104.a: "我们无能为力。"
  LibyaFocus.104.b: "他们会为此付出代价"
  LBA_start_building_reactor_threat: "[LBA.GetAdjective]核计划"
+ LBA_support_south_sudan: "支持[SSU.GetName]"
+ LBA_support_south_sudan_desc: "在奥马尔·巴希尔掌权苏丹之前，我们支持苏丹南部的苏丹人民解放军。巴希尔虽然与我们关系友好，但并不是最好的伙伴。他的国际声誉极差，他失去权力只是时间问题。也许我们应该转而支持[SSU.GetNameDef]？"
+ LBA_send_mercenaries_tt_3: "如果我们完成§Y$LBA_support_south_sudan$§!国策：\n"
