--- a/localisation/simp_chinese/MD_money_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_money_l_simp_chinese.yml
@@ -13,19 +13,19 @@
  REFRESH_TAX_RATE: "更新"
  REFRESH_TAX_RATES_TOOLTIP: "点击此按钮将更新收入和费用率"
  F_DEBT_TOOLTIP: "他们目前有$[?debt]§HB§!§R债务§!。\n他们将以每年[?interest_rate]%的§H利率§!偿付利息。\n\n这意味着每周将从国库结余中扣除$§R[?debt_rate|-3]§!§HB§!用于偿还债务。[literacy_rate_tooltip]"
- F_TREASURY_TOOLTIP: "§Y[THIS.GetName]§!GDP总量：$§U[?gdp_total|0]§!B\n§Y[THIS.GetName]§!人均GDP：$§U[?gdp_per_capita]§!K\n---------\n他们有$[?treasury] §Hbillion§!现金余额\n他们每周收支是$[?treasury_rate|+] §HB§!"
+ F_TREASURY_TOOLTIP: "§Y[THIS.GetName]§!GDP总量：$§U[?gdp_total|0]§!B\n§Y[THIS.GetName]§!人均GDP：$§U[?gdp_per_capita]§!K\n---------\n他们有$[?treasury]§HB§!现金余额\n他们每周收支是$[?treasury_rate|+]§HB§!"
  F_INT_INVESTMENTS_TOOLTIP: "他们目前有$[?int_investments]§HB§!用于国际投资。\n他们每周获得$[?int_investments_rate]§HB§!的§H投资收入§!并收归国库。"
  F_EXPENSE_GAIN_TOOLTIP: "他们目前每周开销为$[?display_expense]§HB§!。"
  F_EXPENSE_GAIN_TOOLTIP_DELAYED: "§C官僚§!：$§R[?bureaucracy_gain|-3]§!\n§O国防§!：$§R[?defence_gain|-3]§!\n§U治安§!：$§R[?security_gain|-3]§!\n§J教育§!：$§R[?education_gain|-3]§!\n§P医保§!：$§R[?health_gain|-3]§!\n§B福利§!：$§R[?welfare_gain|-3]§!\n§R债务利率：§! $§R[?debt_rate|-3]§!\n§7移民控制§!: $$[?border_control_gain|-3]\n§H额外费用：§! $§R[?additional_expenses_rate|-3]§!\n\n总支出：$§R[?display_expense]§!"
  F_TAX_RATE_TOOLTIP: "他们目前§H税率§!为[?tax_rate]%\n\n§Y企业税率：§![?corporate_tax_rate]%\n§Y人口税率：§![?population_tax_rate]%\n"
  F_TAX_GAIN_TOOLTIP: "他们每周获得$[?display_income]§HB§!收入。"
- F_TAX_GAIN_TOOLTIP_DELAYED: "§Y[THIS.GetName]§!GDP：$§U[?THIS.gdp_total|0]§!B\n§Y[THIS.GetName]§!GDP/C： $§U[?THIS.gdp_per_capita]§!K\n---------\n§C人口收入：§! $§G[?population_tax|+3]§!\n§L企业税收：§! $§G[?corporate_tax|+3]§!\n§G国际投资：§! $§G[?int_investments_rate|+3]§!\n§U资源出口：§! §G[?resource_sale_rate|+3]§!\n§H额外收入：§! $§G[?additional_income_rate|+3]§!\n\n总计收入： $§G[?display_income]§!"
+ F_TAX_GAIN_TOOLTIP_DELAYED: "§Y[THIS.GetName]§!GDP：$§U[?THIS.gdp_total|0]§!B\n§Y[THIS.GetName]§!GDP/C： $§U[?THIS.gdp_per_capita]§!K\n\n最新§Y季度GDP增长率§!：[?last_quarter_gdp_growth_rate|%Y]\n---------\n§C人口收入：§! $§G[?population_tax|+3]§!\n§L企业税收：§! $§G[?corporate_tax|+3]§!\n§G国际投资：§! $§G[?int_investments_rate|+3]§!\n§U资源出口：§! §G[?resource_sale_rate|+3]§!\n§H额外收入：§! $§G[?additional_income_rate|+3]§!\n\n总计收入： $§G[?display_income]§!"
  OPEN_ECONOMY_BUTTON: "打开§Y经济预览§!界面"
  OPEN_ECONOMY_BUTTON_TT: "打开经济界面，显示支出和收入、您当前的工厂数量、租赁工厂和建筑物、税率、您的§YGDP§!和§YGDP/C§!以及其他经济信息。它还有一个按钮可以随时更新您的收入/支出，而无需等到一周结束。"
  GDP_TOTAL: "GDP"
  GDP_TOTAL_DESC: "我们的§Y国内生产总值§!(GDP)是衡量国家生产的所有产品和服务的价值。千禧黎明使用经购买力平价(PPP)调整后的GDP，因为这一数值考虑到了当地的经济状况，使国家比较更加有用。"
  NUM_GDP_TOTAL: "$$§U[?ROOT.gdp_total|1]§!B"
- NUM_GDP_TOTAL_DESC: "我们目前的§YGDP§!为$§U[?ROOT.gdp_total|3]§!B"
+ NUM_GDP_TOTAL_DESC: "我们目前的§YGDP§!为$§U[?ROOT.gdp_total|3]§!B\n\n最近的§Y季度GDP增长率§!：[?last_quarter_gdp_growth_rate|%Y]\n\n提示：您的§Y季度GDP增长率§!越高，您就越有可能获得正面的经济事件。"
  NUM_GDP_TOTAL_DELAYED_DESC: "各行业的大致贡献百分比：\n§P民用工厂§!：[?ROOT.civil_fac_percent|%]\n§O军用工厂§!：[?ROOT.military_fac_percent|%]\n§B海军船坞§!：[?ROOT.dockyard_fac_percent|%]\n§C办公园区§!：[?ROOT.office_fac_percent|%]\n§G非商业化农业§!：[?ROOT.agriculture_percent|%]\n§Y商业化农业区§!：[?ROOT.agriculture_district_fac_percent|%]\n§G资源开采§!：[?ROOT.resources_percent|%]\n"
  GDP_PER_CAPITA: "人均GDP水平"
  GDP_PER_CAPITA_DESC: "这个数字代表§Y人均GDP§!或称为§YGDP/C§!，它代表了这个国家平均到每个人的产出。"
@@ -690,3 +690,5 @@
  LBA_oil_nationalisation_additional_income_tt: "$$[?libya_oil_nationalisation_additional_income|+3]来自§Y石油国有化§!\n"
  additional_income_overlord_subsidies_tt: "$$[?additional_income_overlord_subsidies|+3]来自§Y宗主补贴§!"
  additional_income_overlord_total_subsidies_tt: "$$[?overlord_subsidies_total_cost|-3]来自§Y宗主补贴§!"
+ ag_district_employment_button_tt: "§Y商业化农业区就业§!"
+ ag_district_employment_button_delayed_tt: "当我们的工作岗位多于工人数量时，在某些情况下增加或减少分配给每个部门（工厂/办公室）的工人数量可能会有所裨益，这样可以让更多的工人进入其他部门。\n\n政治点数：§R-20§!\n\n£click_left §Y左键点击§!以降低商业化农业区的就业水平。\n£click_right §Y右键点击§!以增加。\n\n当前的目标就业水平为：§Y[?ROOT.agriculture_district_employment_var|%]§!"
